--- a/行政-預算及主計/會計法.md
+++ b/行政-預算及主計/會計法.md
@@ -1,246 +1,246 @@
-* 1 中華民國各級政府及其所屬機關會計制度之設計及會計事務之處理，依本法之規定。
+* 1 政府及其所屬機關辦理各項會計事務，依本法之規定。
 
-* 2 各下級政府之主計機關，無主計機關者，其最高主計人員，關於會計事務，應受該管上級政府主計機關之直接監督與指揮。
+* 2 各下級政府主計機關（無主計機關者，其最高主計人員），關於會計事務，應受該管上級政府主計機關之監督與指導。
 
-* 3 各級政府及其所屬機關，對於左列事項，應依機關別與基金別為詳確之會計：一、預算之成立、分配、執行。二、歲入之徵課或收入。三、債權債務之發生、處理、清償。四、現金、票據、證券之出納、保管、移轉。五、不動產物品及其他財產之增減、保管、移轉。六、政事費用、事業成本及歲計餘絀之計算。七、營業成本與損益之計算及歲計盈虧之處理。八、其他應為會計之事項。
+* 3 政府及其所屬機關，對於左列事項，應依機關別與基金別為詳確之會計：一、預算之成立、分配、執行。二、歲入之徵課或收入。三、債權、債務之發生、處理、清償。四、現金、票據、證券之出納、保管、移轉。五、不動產物品及其他財產之增減、保管、移轉。六、政事費用、事業成本及歲計餘絀之計算。七、營業成本與損益之計算及歲計盈虧之處理。八、其他應為會計之事項。
 
-* 4 前條會計之事務，依其性質，分左列五類：一、普通公務之會計事務：謂公務機關一般之會計事務。二、特種公務之會計事務：謂特種公務機關，除前款之會計事務外，所辦之會計事務。三、公有事業之會計事務：謂公有事業機關之會計事務。四、公有營業之會計事務：謂公有營業機關之會計事務。五、非常事件之會計事務：謂有非常預算之事件，及其他不隨會計年度開始與終了之重大事件，其主辦機關或臨時組織對於處理該事件之會計事務。凡政府所屬機關，專為供給財物勞務或其他利益，而以營利為目的，或取相當之代價者，為公有營業機關；其不以營利為目的或不取相當之代價者，為公有事業機關。
+* 4 前條會計事項之事務，依其性質，分左列五類：一、普通公務之會計事務：謂公務機關一般之會計事務。二、特種公務之會計事務：謂特種公務機關除前款之會計事務外，所辦之會計事務。三、公有事業之會計事務：謂公有事業機關之會計事務。四、公有營業之會計事務：謂公有營業機關之會計事務。五、非常事件之會計事務：謂有非常性質之事件，及其他不隨會計年度開始與終了之重大事件，其主辦機關或臨時組織對於處理該事件之會計事務。凡政府所屬機關，專為供給財物、勞務或其他利益，而以營利為目的，或取相當之代價者，為公有營業機關；其不以營利為目的者，為公有事業機關。
 
-* 5 普通公務之會計事務，為左列三種：一、公務歲計之會計事務：謂公務機關之歲入或經費之預算實施，及其實施時之收支，與因處理收支而發生之債權債務，及計算政事費用與歲計餘絀之會計事務。二、公務出納之會計事務：謂公務機關之現金、票據、證券之出納、保管、移轉之會計事務。三、公務財物之會務事務：謂公務機關之不動產物品及其他財產之增減、保管、移轉之會計事務。
+* 5 普通公務之會計事務，為左列三種：一、公務歲計之會計事務：謂公務機關之歲入或經費之預算實施，及其實施時之收支，與因處理收支而發生之債權、債務，及計算政事費用與歲計餘絀之會計事務。二、公務出納之會計事務：謂公務機關之現金、票據、證券之出納、保管、移轉之會計事務。三、公務財物之會計事務：謂公務機關之不動產物品及其他財產之增減、保管、移轉之會計事務。
 
-* 6 特種公務之會計事務，為左列六種：一、公庫出納之會計事務：謂公庫關於現金、票據、證券之出納、保管、移轉之會計事務。二、財物經理之會計事務：謂公有財物經理機關，關於所經理不動產物品及其他財產之增減、保管、移轉之會計事務。三、徵課之會計事務：謂徵收機關，關於稅賦捐費等收入之徵課、查定，及其他依法處理之程序，與所用之票照等憑證，及其處理徵課物之會計事務。四、公債之會計事務：謂公債主管機關，關於公債之發生、處理、清償之會計事務。五、特種財物之會計事務：謂特種財物之管理機關。關於所管財務處理之會計事務。六、特種基金之會計事務：謂特種基金之管理機關，關於所管基金處理之會計事務。前項第一款稱公庫者，在中央為國庫，在省為省庫，在縣為縣庫，在市為市庫，第六款稱特種基金者，謂除營業基金、公債基金及另為事業會計之事業基金外，各種信託基金、留本基金、特賦基金、非營業之循環基金等，不屬於普通基金之各種基金。
+* 6 特種公務之會計事務，為左列六種：一、公庫出納之會計事務：謂公庫關於現金、票據、證券之出納、保管、移轉之會計事務。二、財物經理之會計事務：謂公有財產經理機關，關於所經理不動產物品及其他財產之增減、保管、移轉之會計事務。三、徵課之會計事務：謂徵收機關，關於稅賦捐費等收入之徵課、查定，及其他依法處理之程序，與所用之票照等憑證，及其處理徵課物之會計事務。四、公債之會計事務：謂公債主管機關，關於公債之發生、處理、清償之會計事務。五、特種財物之會計事務：謂特種財物之管理機關，關於所管財務處理之會計事務。六、特種基金之會計事務：謂特種基金之管理機關，關於所管基金處理之會計事務。前項第六款稱特種基金者：謂除營業基金、公債基金及另為事業會計之事業基金外，各種信託基金、留本基金、非營業之循環基金等，不屬於普通基金之各種基金。
 
-* 7 公有營業之會計事務，為左列四種：一、營業歲計之會計事務：謂營業預算之實施，及其實施時之收支，與因處理收支而發生之債權債務，及計算歲計盈虧與營業損益之會計事務。二、營業成本之會計事務：謂計算營業之出品或勞務每單位所費成本之會計事務。三、營業出納之會計事務：謂營業上之現金、票據、證券之出納、保管、移轉之會計事務。四、營業財物之會計事務：謂營業上使用及運用之財物之增減、保管、移轉之會計事務。公有事業之會計事務，準用前項之規定，但不為損益之計算。有作業組織之各機關，其作業部分之會計事務，得按其性質，分別準用前二項之規定。公務機關附帶為事業或營業之行為，而別有一部分之組織者，其組織為作業組織。公有事業或公有營業機關，於其本業外，附帶為他種事業或營業之行為而別有一部分之組織者，其組織亦得視為作業組織。
+* 7 公有營業之會計事務，為左列四種：一、營業歲計之會計事務：謂營業預算之實施，及其實施之收支，與因處理收支而發生之債權、債務，及計算歲計盈虧與營業損益之會計事務。二、營業成本之會計事務：謂計算營業之出品或勞務每單位所費成本之會計事務。三、營業出納之會計事務：謂營業上之現金、票據、證券之出納、保管、移轉之會計事務。四、營業財物之會計事務：謂營業上使用及運用之財產增減、保管、移轉之會計事務。公有事業之會計事務：準用前項之規定。但不為損益之計算。有作業行為之各機關，其作業部份之會計事務，得按其性質，分別準用前二項之規定。公務機關附帶為事業或營業之行為而別有一部分之組織者，其組織為作業組織；公有事業或公有營業機關，於其本業外，附帶為他種事業或營業之行為而別有一部分之組織者，其組織亦得視為作業組織。
 
-* 8 各機關對於所有前三條之會計事務，均應分別綜合之而為統制之會計。
+* 8 各機關對於所有前三條之會計事務，均應分別種類，綜合彙編，作為統制會計。
 
-* 9 各公務機關掌理一種以上之特種公務者，應辦理一種以上之特種公務之會計事務；其兼辦公有營業或其他公有事業者，並應辦理公有營業或公有事業之會計事務。非政府所屬機關而代理政府事務者，對於所代理之事務，應依本法之規定辦理會計事務。
+* 9 政府會計之組織為左列五種：一、總會計。二、單位會計。三、分會計。四、附屬單位會計。五、附屬單位會計之分會計。前項各款會計，均應用複式簿記。但第三款、第五款分會計之事務簡單者，不在此限。第一項各款會計之帳務處理，得視事實需要，呈請上級主計機關核准後，集中辦理。
 
-* 10 政府會計之組織為，左列五種：一、總會計。二、單位會計。三、分會計。四、附屬單位會計。五、附屬單位會計之分會計。前項各款會計，均應用複式簿記，但第三款第五款分會計之事務簡單者，不在此限。
+* 10 中央、省（市）、縣（市）政府之會計，各為一總會計。
 
-* 11 中央、省、市、縣各政府之會計，各為一總會計。
+* 11 左列各款會計，為單位會計：一、在總預算有法定預算之機關單位之會計。二、在總預算不依機關劃分而有法定預算之特種基金之會計。
 
-* 12 左列各款會計，為單位會計：一、在總預算有法定預算之機關單位之會計。二、在總預算不依機關劃分而有法定預算之特種基金之會計。
+* 12 單位會計下之會計，除附屬單位會計外，為分會計，並冠以機關名稱。
 
-* 13 單位會計下之會計，除附屬單位會計外，為分會計。
+* 13 左列各款會計，為附屬單位會計：一、政府或其所屬機關附屬之營業機關、事業機關或作業組織之會計。二、各機關附屬之特種基金，以歲入、歲出之一部編入總預算之會計。
 
-* 14 左列各款會計為附屬單位會計：一、各級政府或其所屬機關附屬之營業機關、事業機關或作業組織之會計。二、各機關附屬之特種基金之會計。
+* 14 附屬單位會計下之會計，為附屬單位會計之分會計，並冠以機關名稱。
 
-* 15 附屬單位會計下之會計，為附屬單位會計之分會計。
+* 15 會計年度之開始及終了，依預算法之所定。會計年度之分季，自年度開始之日起，每三個月為一季。會計年度之分月，依國曆之所定。各月之分旬，以一日至十日為上旬，十一日至二十日為中旬，二十一日至月之末日為下旬。各月之分為五日期間者，自一日起，每五日為一期，其最後一期為二十六日至月之末日。期間不以會計年度或國曆月份之始日起算者，或月份非連續計算者，其計算依民法第一百二十一條至第一百二十三條之所定。
 
-* 16 會計制度之設計，應將所需要之會計報告決定後，據以訂定應設立之會計科目簿籍報表及應有之會計憑證。凡性質相同或類似之機關或基金，其會計制度應為一致之規定，政府會計基礎除公庫出納會計外，應採用權責發生制。
+* 16 政府會計應以國幣或預算所定之貨幣為記帳本位幣；其以不合本位幣之本國或外國貨幣記帳者，應折合本位幣記入主要之帳簿。記帳時，除為乘除計算外，小數至分位為止，釐位四捨五入。前項規定，如有特殊情形者，得擬定處理辦法，經各該政府主計機關核定施行。
 
-* 17 總會計之設計，由各該級政府之主計機關為之。單位會計或附屬單位會計及其分會計之設計，由各該機關單位之主辦會計人員擬訂，呈由各該級政府之主計機關核定。前項設計，應先經核准試辦，再經各關係機關之會計人員及審計人員會商後，始得核定。
+* 17 會計制度之設計，應依會計事務之性質、業務實際情形及其將來之發展，先將所需要之會計報告決定後，據以訂定應設立之會計科目、簿籍、報表及應有之會計憑證。凡性質相同或類似之機關或基金，其會計制度應為一致之規定。政府會計基礎，除公庫出納、會計外，應採用權責發生制。
 
-* 18 前二條之設計，應明定左列各事項。一、各會計制度應實施之機關範圍。二、會計報告之種類及其書表格式。三、會計科目之分類及其編號。四、會計簿籍之種類及其格式。五、會計憑證之種類及其格式。六、會計事務之處理程序。七、其他應行規定之事項。
+* 18 中央總會計制度之設計、核定，由中央主計機關為之。地方政府之總會計制度及各種會計制度之一致規定，由各該政府之主計機關設計，呈經上級主計機關核定頒行。各機關之會計制度，由各該機關之會計機構設計，簽報所在機關長官後，呈請各該政府之主計機關核定頒行。前項設計，應經各關係機關及該管審計機關會商後始得核定；修正時亦同。各種會計制度之釋例，與會計事務處理之一致規定，由各該會計制度之頒行機關核定之。
 
-* 19 各會計制度，不得與本法及預算、決算、審計、統計等法牴觸，單位會計及分會計之會計制度，不得與其總會計之會計制度牴觸，附屬單位會計及其分會計之會計制度，不得與該管單位會計或分會計之會計制度牴觸。
+* 19 前二條之設計，應明定左列各事項：一、各會計制度應實施之機關範圍。二、會計報告之種類及其書表格式。三、會計科目之分類及其編號。四、會計簿籍之種類及其格式。五、會計憑證之種類及其格式。六、會計事務之處理程序。七、內部審核之處理程序。八、其他應行規定之事項。
 
-* 20 各會計制度之實施機關範圍確定後，關係機關中有因特殊情形不能適用時，其主辦會計人員得擬訂變通辦法，呈請該級政府主計機關核定之，但其變通辦法仍受前條所定之限制。
+* 20 各會計制度，不得與本法及預算、決算、審計、國庫、統計等法牴觸；單位會計及分會計之會計制度，不得與其總會計之會計制度牴觸；附屬單位會計及其分會計之會計制度，不得與該管單位會計或分會計之會計制度牴觸。
 
-* 21 會計年度之開始及終了，依預算法之所定。會計年度之分季，自國曆一月一日起，每三個月為一季。會計年度之分月，依國曆之所定。各月之分旬以一日至十日為上旬，十一日至二十日為中旬，二十一日至月之末日為下旬。各月之分為五日期間者，自一日起，每五日為一期，其最後一期為二十六日至月之末日。期間不以會計年度或國曆月份之始日起算者，或月份非連續計算者，其計算依民法第一百二十一條至第一百二十三條之所定。
+* 21 各種會計報告應劃分會計年度，按左列需要，編製各種定期與不定期之報告，並得兼用統計與數理方法，為適當之分析、解釋或預測：一、對外報告，應按行政、監察、立法之需要，及人民所須明瞭之會計事實編製之。二、對內報告，應按預算執行情形、業務進度及管理控制與決策之需要編製之。
 
-* 22 政府會計以國幣為記帳本位幣，其以不合本位幣之本國或外國貨幣記帳者，應折合本位幣記入主要之帳簿。記帳時，除為乘除計算外，小數至分位為止，釐位四捨五入。
+* 22 會計報告分左列二類：一、靜態之會計報告：表示一定日期之財務狀況。二、動態之會計報告：表示一定期間內之財務變動經過情形。前項靜態、動態報告各表，遇有比較之必要時，得分別編造比較表。
 
-* 23 各種會計報告，應按行政、監察、立法之需要，及人民所須明瞭之會計事實編製之。
+* 23 各單位會計及附屬單位會計之靜態與動態報告，依充分表達原則，及第五條至第七條所列之會計事務，各於其會計制度內訂定之。靜態報告應按其事實，分別編造左列各表：一、平衡表。二、現金結存表。三、票據結存表。四、證券結存表。五、票照等憑證結存表。六、徵課物結存表。七、公債現額表。八、財物或特種財物目錄。九、固定負債目錄。動態報告應按其事實，分別編造左列各表：一、歲入或經費累計表。二、現金出納表。三、票據出納表。四、證券出納表。五、票照等憑證出納表。六、徵課物出納表。七、公債發行表及公債還本付息表。八、財物或特種財物增減表。九、固定負債增減表。十、成本計算表。十一、損益計算表。十二、資金運用表。十三、盈虧撥補表。
 
-* 24 會計報告之編製，依會計年度為之，但得分編各種定期、不定期或臨時之報告。
+* 24 非常事件所應編造之會計報告各表，由主計機關按事實之需要，參酌前條之規定分別定之。
 
-* 25 會計報告分左列二類：一、靜態之會計報告，表示一定日時之財務狀況。二、動態之會計報告，表示一定期間內之財務變動經過情形。
+* 25 各單位會計所需編製之會計報告各表，應按基金別編造之。但為簡明計，得按基金別分欄綜合編造。
 
-* 26 各單位會計或附屬單位會計之靜態報告，依第五條至第七條所列之會計事務，分別編造左列各表：一、公務歲計之歲入資力負擔平衡表、經費資力負擔平衡表等。二、公務出納之現金結存表、票據結存表、證券結存表等。三、公務財物之財物目錄等。四、公庫出納之資產負債平衡表、現金結存表、票據結存表、證券結存表等。五、財物經理之資產負債平衡表及財物目錄等。六、徵課之資力負擔平衡表、票照等憑證結存表及徵課物之結存表或目錄等。七、公債之資力負擔平衡表、公債現額表等。八、特種財物之特種財物目錄等。九、特種基金之資力負擔平衡表、資產負債平衡表或資力負擔資產負債綜合平衡表，及現金結存表、票據結存表、證券結存表、財物目錄、固定負債目錄等。十、公有營業或公有事業之資產負債平衡表、資力負擔平衡表、或資產負債資力負擔綜合平衡表，及現金結存表、票據結存表、證券結存表、財物目錄、固定負債目錄等。
+* 26 分會計應編造之靜態與動態報告，應就其本身其隸屬單位會計或附屬單位會計之需要，於其會計制度內訂定之。
 
-* 27 各單位會計或附屬單位會計之動態報告，依第五條至第七條所列之會計事務，分別編造左列各表：一、公務歲計之歲入累計表、經費累計表等。二、公務出納之現金出納表、票據出納表、證券出納表等。三、公務財物之財物增減表等。四、公庫出納之現金出納表、票據出納表、證券出納表等。五、財物經理之財物增減表等。六、徵課之徵課表票照等憑證之出納表，及徵課物之出納表或增減表等。七、公債之公債發行表、公債還本付息表等。八、特種財物之特種財物增減表等。九、特種基金之收支累計表、現金出納表、票據出納表、證券出納表、財務增減表、固定負債增減表等。十、公有事業之收入累計表、支出累計表、現金出納表、票據出納表、證券出納表、財物增減表、固定負債增減表、成本計算表等。十一、公有營業之收入累計表、支出累計表、現金出納表、票據出納表、證券出納表、財物增減表、固定負債增減表、成本計算表、損益計算表、盈虧撥補表等。
+* 27 第二十二條至第二十五條之報告及各表，得由各該政府主計機關，會同其單位會計機關或附屬單位會計機關之主管長官及其主辦會計人員，按事實之需要，酌量減少或合併編製之。
 
-* 28 非常事件所應編造之會計報告各表，由主計機關按事實之需要，參酌前二條之規定分別定之。
+* 28 政府之總會計，應為第二十一條至第二十三條綜合之報告。但依第九條第三項集中辦理者，得就其會計紀錄產生會計報告。
 
-* 29 前三條之靜態動態報告各表，遇有比較之必要時，得分別編造比較表。
+* 29 政府之財物及固定負債，除列入歲入之財物及彌補預算虧絀之固定負債外，應分別列表或編目錄，不得列入平衡表。但營業基金、事業基金及其他特種基金之財物及固定負債為其基金本身之一部分時，應列入其平衡表。
 
-* 30 前四條之會計報告各表，各單位會計應按基金別編造之，但為簡明計，得按基金別分欄綜合編造。
+* 30 各種會計報告表，應根據會計紀錄編造，並使便於核對。
 
-* 31 各級政府之總會計，應為第二十六條至第二十九條綜合之報告。
+* 31 非政府機關代理政府事務者，其報告與會計人員之報告發生差額時，應由會計人員加編差額解釋表。
 
-* 32 分會計應編造之報告各表，應就其本身及其所隸屬之單位會計或附屬單位會計所需要之事實，參酌第二十六條至第三十條之規定，分別定之。
+* 32 各單位會計機關及各附屬單位會計機關報告之編送，應依左列期限：一、日報於次日內送出。二、五日報於期間經過後二日內送出。三、週報、旬報於期間經過後三日內送出。四、月報、季報於期間經過後十五日內送出。但法令另定期限者，依其期限。五、半年度報告於期間經過後三十日內送出；年度報告，依決算法之規定。前項第一款至第四款各報告之編送期限，於分會計及附屬單位會計之分會計適用之。第一項第五款之報告，應由單位會計或附屬單位會計機關，就其分會計機關整理後之報告彙編之；其編送期限，得按各該分會計機關呈送整理報告之期限及其郵遞實需期間加算之；採用機器處理會計資料之機關，其會計報告編送期限，由該管主計機關定之。
 
-* 33 第二十五條至第三十條及第三十二條之報告及各表，得由各級政府主計機關，會同其單位會計機關或附屬單位會計機關之主管長官及其主辦會計人員，按事實之需要，酌量增減或合併編製之。
+* 33 前條第一項第一款至第四款之報告，其關於各機關本身之部分，在日報應以每日辦事完畢時已入帳之會計事項；在五日報、週報、旬報、月報、季報，應以各該期間之末日辦事完畢時已入帳之會計事項，分別列入。其關於彙編所屬機關之部分，在日報，應以每日辦事完畢時已收到之所屬機關日報內之會計事項；在五日報、週報、旬報、月報、季報，應以各該期間之末日辦事完畢時已收到之所屬機關之五日報、週報或旬報、月報、季報內之會計事項，分別列入。但月報、季報之採用月結、季結制者，不在此限。
 
-* 34 政府之財物及固定負債，除列入歲入之財物及彌補預算虧絀之固定負債外，應分別列表或編目錄，不得列入資力負擔平衡表或資產負債平衡表。但營業基金事業基金及其他特種基金之財物及固定負債為其基金本身之一部分時，應列入其資力負擔平衡表及資產負債平衡表。
+* 34 各種會計科目，依各種會計報告所應列入之事項定之，其名稱應顯示其事項之性質；如其科目性質與預算、決算科目相同者，其名稱應與預算、決算科目之名稱相合。
 
-* 35 各種會計報告表，應根據帳簿編造並使便於核對。
+* 35 各種會計報告總表之會計科目，與其明細表之會計科目，應顯示其統制與隸屬之關係，總表會計科目為統制帳目，明細表會計科目為隸屬帳目。
 
-* 36 非政府機關而代理政府事務者，其報告與會計人員之報告發生差額時，應由會計人員加編差額解釋表。
+* 36 為便利綜合彙編及比較計，中央政府各機關對於事項相同或性質相同之會計科目，應使其一致，對於互有關係之會計科目，應使之相合。地方政府對於與中央政府事項相同或性質相同之會計科目，應依中央政府之所定；對於互有關係之會計科目，應使合於中央政府之所定。
 
-* 37 各單位會計機關及附屬單位會計機關之報告，呈送上級機關，應依左列期限：一、日報於次日內送出。二、五日報於期間經過後二日內送出。三、週報、旬報於期間經過後三日內送出。四、月報、季報於期間經過後十五日內送出。但法令另定期限者，依其期限。五、半年度報告於期間經過後十日內送出。年度報告，依決算法之規定。前項第一款至第四款各報告之呈送期限，於分會計及附屬單位會計之分會計適用之。第一項第五款之報告，應由單位會計或附屬單位會計機關，就其分會計機關整理後之報告彙編之，其呈送期限，得按各該分會計機關呈送整理報告之期限及其郵遞實需期間加算之。各該分會計機關呈送整理報告之期限，由該管主管機關定之。
+* 37 各種會計科目之訂定，應兼用收付實現事項及權責發生事項，為編定之對象。
 
-* 38 前條第一款至第四款之報告，其關於各機關本身之部分，在日報應以每日辦事完畢時已入帳之會計事項，在五日報、週報、旬報、月報、季報，應以各該期間之末日辦事完畢時已入帳之會計事項，分別列入。其關於彙編所屬機關之部分，在日報，應以每日辦事完畢時已收到之所屬機關日報內之會計事項，在五日報、週報、旬報、月報、季報，應以各該期間之末日辦事完畢時已收到之所屬機關之五日報、週報、或旬報、月報、季報內之會計事項分別列入。
+* 38 各種會計科目，應依所列入之報告，並各按其科目之性質，分類編號。
 
-* 39 第三十七條第一項第一款至第四款之報告，應各編以順序號數，其號數均應每年度重編一次。但在會計年度終了後，整理期間內補編之報告，仍續編該終了年度之順序號數。
+* 39 會計科目名稱經規定後，非經各該政府主計機關或其負責主計人員之核定，不得變更。前項變更會計科目之核定，應通知該管審計機關。
 
-* 40 總會計之年度報告，單位會計及分會計之月報，均應公告。各機關本身部份之會計事實，並應由會計人員按月向各該機關公告之。如各該機關人員對上項公告有疑義時，得向會計人員查詢之。
+* 40 會計簿籍分左列二類：一、帳簿：謂簿籍之紀錄，為供給編造會計報告事實所必需者。二、備查簿：謂簿籍之紀錄，不為編造會計報告事實所必需，而僅為便利會計事項之查考，或會計事務之處理者。會計資料採用機器處理者，其機器貯存體中之紀錄，視為會計簿籍。前項機器貯存體中之紀錄，應於處理完畢時，附置總數控制數碼，並另以書面標示，由主辦會計人員審核簽名或蓋章。
 
-* 41 各種會計科目，依各種會計報告所應列入之事項定之，其名稱應顯示其事項之性質，如其科目性質與預算決算科目相同者，其名稱應與預算決算科目之名稱相合。
+* 41 帳簿分左列二類：一、序時帳簿：謂以事項發生之時序為主而為紀錄者，其個別名稱謂之簿。二、分類帳簿：謂以事項歸屬之會計科目為主而為紀錄者，其個別名稱謂之帳。
 
-* 42 各種會計報告總表之會計科目，與其明細表之會計科目，應顯示其統制與隸屬之關係，總表會計科目為統制帳目，明細表會計科目為隸屬帳目。
+* 42 序時帳簿及分類帳簿，均得就事實上之需要及便利，設立專欄。
 
-* 43 為便利綜合彙編及比較計，中央政府各機關對於事項相同或性質相同之會計科目，應使其一致，對於互有關係之會計科目，應使之相合。他級政府對於與中央政府事項相同或性質相同之會計科目，應依中央政府所定，對於互有關係之會計科目應使合於中央政府之所定。
+* 43 序時帳簿分左列二種：一、普通序時帳簿：謂對於一切事項為序時登記，或並對於第二款帳項之結數為序時登記而設者，如分錄日記帳簿。二、特種序時帳簿：謂對於特種事項為序時登記而設者，如歲入收支登記簿、經費收支登記簿、現金出納登記簿及其他關於特種事項之登記簿。
 
-* 44 各種會計科目之訂定，應兼用收付實現事項及權責發生事項，為編定之對象。
+* 44 分類帳簿分左列二種：一、總分類帳簿：謂對於一切事項為總括之分類登記，以編造會計報告總表為主要目的而設者。二、明細分類帳簿：謂對於特種事項為明細分類或分戶之登記，以編造會計報告明細表為主要目的而設者，如歲入明細帳簿、經費明細帳簿、財物明細帳簿及其他有關於特種事項之明細帳簿。設有明細分類帳簿者，總分類帳簿內應設統制帳目，登記各該明細分類帳之總數。但財物明細分類帳簿，除依第二十九條應列入平衡表者外，應另設統制帳簿。
 
-* 45 在公有營業之會計事務，為成本損益之計算，對於其營業上使用之財物有永久性者，應有折舊科目，無永久性者，應有盤存消耗科目。公務機關之作業組織及公有事業，其會計事務為成本之計算者亦同。
+* 45 政府主計機關，對於總會計、單位會計、附屬單位會計及分會計之特種序時帳簿及明細分類帳簿，為求簡便計，得酌量合併編製。
 
-* 46 各種會計科目，應依所列入之報告，並各按其科目之性質，分類編號。
+* 46 關於各單位會計或附屬單位會計之帳簿，除應設置普通序時帳簿及總分類帳簿外，其特種序時帳簿及明細分類帳簿，應由各該政府主計機關，會同單位會計或附屬單位會計機關或基金之主管長官及主辦會計人員，按事實之需要，酌量設置之。各單位會計或附屬單位會計之備查簿，除主計機關認為應設置者外，各機關或基金主管長官及主辦會計人員，亦得按其需要情形，自行設置之。
 
-* 47 各級政府及其所屬各機關會計科目之則例，依第十六條第十七條之程序訂定之。
+* 47 各分會計之會計事務較繁者，其帳簿之種類，準用關於單位會計或附屬單位會計之規定；其會計事務較簡者，得僅設序時帳簿及其必需之備查簿。
 
-* 48 會計科目名稱經規定後，非經各該級政府主計機關或其最高主計人員之核定，不得變更。
+* 48 各分會計機關，應就其序時帳簿之內容，按時抄送主管之單位會計機關或附屬單位會計機關列帳；其會計事務較繁者，得由主管之單位會計機關或附屬單位會計機關，商承各該政府主計機關及該管審計機關，使僅就其每期各科目之借方、貸方各項總數，抄送主管之單位會計機關或附屬單位會計機關列帳。
 
-* 49 會計簿籍分左列二類：一、帳簿：謂簿籍之紀錄為供給編造會計報告事實所必需者。二、備查簿：謂簿籍之紀錄，不為編造會計報告事實所必需，而僅為便利會計事項之查考或會計事務之處理者，如票據期日簿、印鑑簿、住址簿等。
+* 49 總會計之帳簿，應就其彙編會計總報告所需之記載設置之；其備查簿就其處理事務上之需要設置之。
 
-* 50 帳簿分左列二類：一、序時帳簿：謂以事項發生之時序為主而為紀錄者。二、分類帳簿：謂以事項歸屬之會計科目為主而為紀錄者。
+* 50 管理特種財物機關，關於所管珍貴動產，應備索引、照相、圖樣及其他便於查對之暗記紀錄等備查簿；關於所管不動產，應備地圖、圖樣等備查簿；其程式由各該政府之主計機關定之。
 
-* 51 序時帳簿分左列二種：一、普通序時帳簿：謂對於一切事項為序時登記，或並對於第二款帳項之結數為序時登記而設者，如分錄日記帳簿。二、特種序時帳簿：謂對於特種事項為序時登記而設者，如歲入收支登記簿、經費收支登記簿、現金出納登記簿及其他關於特種事項之登記簿。
+* 51 會計憑證分左列二類：一、原始憑證：謂證明事項經過而為造具記帳憑證所根據之憑證。二、記帳憑證：謂證明處理會計事項人員責任，而為記帳所根據之憑證。
 
-* 52 分類帳簿分左列二種：一、總分類帳簿：謂對於一切事項為總括之分類登記，以編造會計報告總表為主要目的而設者。二、明細分類帳簿：謂對於特種事項為明細分類或分戶之登記，以編造會計報告明細表為主要目的而設者，如歲入明細帳簿、經費明細帳簿、財物明細帳簿及其他關於特種事項之明細帳簿。設有明細分類帳簿者，總分類帳簿內應設統制帳目，登記各該明細分類帳之總數。但財物之明細分類帳簿，除依第三十四條應列入資力負擔平衡表及資產負債平衡表者外，應另設統制帳簿。
+* 52 原始憑證為左列各種：一、預算書表及預算準備金依法支用與預算科目間經費依法流用之核准命令。二、現金、票據、證券之收付及移轉等書據。三、薪俸、工餉、津貼、旅費、卹養金等支給之表單及收據。四、財物之購置、修繕；郵電、運輸、印刷、消耗等各項開支發票及收據。五、財物之請領、供給、移轉、處置及保管等單據。六、買賣、貸借、承攬等契約及其相關之單據。七、存匯、兌換及投資等證明單據。八、歸公財物、沒收財物、贈與或遺贈之財物目錄及證明書類。九、稅賦捐費等之徵課、查定，或其他依法處理之書據、票照之領發，及徵課物處理之書據。十、罰款、賠款經過之書據。十一、公債發行之法令、還本付息之本息票及處理申溢折扣之計算書表。十二、成本計算之單據。十三、盈虧處理之書據。十四、會計報告書表。十五、其他可資證明第三條各款事項發生經過之單據或其他書類。前項各種憑證之附屬書類，視為各該憑證之一部。
 
-* 53 序時帳簿及分類帳簿，均得就事實上之需要及便利，設立專欄。
+* 53 記帳憑證為左列三種：一、收入傳票。二、支出傳票。三、轉帳傳票。前項各種傳票，應以顏色或其他方法區別之。
 
-* 54 各級政府主計機關，對於總會計、單位會計、附屬單位會計及分會計之特種序時帳簿及明細分類帳簿，為求簡便計，得酌量合併編製。
+* 54 各種傳票應為左列各項之記載：一、年、月、日。二、會計科目。三、事由。四、本位幣數目，不以本位幣計數者，其貨幣之種類、數目及折合率。五、有關之原始憑證種類、張數及其號數、日期。六、傳票號數。七、其他備查要點。
 
-* 55 關於各單位會計或附屬單位會計之帳簿，除應設置普通序時帳簿及總分類帳簿外，其特種序時帳簿及明細分類帳簿，應由各級政府主計機關會同單位會計或附屬單位會計機關或基金之主管長官及主辦會計人員，按事實之需要，酌量設置之。各單位會計或附屬單位會計之備查簿，除主計機關認為應設置者外，各機關或基金主管長官及主辦會計人員，亦得按其需要情形，自行設置之。
+* 55 各種傳票，非經左列各款人員簽名或蓋章不生效力。但實際上無某款人員者缺之：一、機關長官或其授權代簽人。二、業務之主管或主辦人員。三、主辦會計人員或其授權代簽人。四、關係現金、票據、證券出納保管移轉之事項時，主辦出納事務人員。五、關係財務增減、保管、移轉之事項時，主辦經理事務人員。六、製票員。七、登記員。前項第一款、第二款、第五款人員，已於原始憑證上為負責之表示者，傳票上得不簽名或蓋章。
 
-* 56 各分會計之會計事務較繁者，其帳簿之種類，準用關於單位會計或附屬單位會計之規定，其會計事務較簡者，得僅設序時帳簿及其所必需之備查簿。
+* 56 原始憑證，其格式合於記帳憑證之需要者，得用作記帳憑證，免製傳票。
 
-* 57 各分會計機關，應就其序時帳簿之內容，按時抄送主管之單位會計機關或附屬單位會計機關列帳，其會計事務較繁者，得由主管之單位會計機關或附屬單位會計機關，商承各該政府主計機關及該管審計機關，使僅就其每期各科目之借方貸方各項總數，抄送主管之單位會計機關或附屬單位會計機關列帳。
+* 57 各分會計機關之事務簡單者，其原始憑證經機關長官及主辦會計人員簽名或蓋章後，得用作記帳憑證，免製傳票。
 
-* 58 總會計之帳簿，應就其彙編會計總報告所需要之記載設置之，其備查簿應就其處理事務上之需要設置之。
+* 58 會計人員非根據合法之原始憑證，不得造具記帳憑證；非根據合法之記帳憑證，不得記帳。但整理結算及結算後轉入帳目等事項無原始憑證者，不在此限。
 
-* 59 管理特種財物機關，關於所管珍貴動產，應備索引照相圖樣及其他便於查對之暗記紀錄等備查簿，關於所管不動產，應備地圖圖樣等備查簿，其程式由各該政府之主計機關定之。
+* 59 大宗財物之增減、保管、移轉，應隨時造具記帳憑證。但零星消費品、材料品之付出，得每月分類彙總造具記帳憑證。
 
-* 60 會計憑證分左列二類：一、記帳憑證：謂證明處理會計事項人員之責任而為記帳所根據之憑證。二、原始憑證：謂證明事項之經過而為造具記帳憑證所根據之憑證。
+* 60 公有營業有永久性財物之折舊，與無永久性財物之盤存消耗，應以成本為標準；其成本無可稽考者，以初次入帳時之估價為標準。
 
-* 61 原始憑證為左列各種：一、預算書表及預算準備金，依法支用與預算科目間經費，依法流用之核准命令。二、現金、票據、證券之收付、移轉等書據。三、薪俸、工餉、津貼、旅費、卹養金等支給之表單收據。四、財物之購置、修繕及郵電、運輸、印刷消耗等各項開支發票收據。五、財物之請領、供給、移轉、處置、保管等單據。六、買賣、借貸、承攬等契約及其相關之單據。七、存匯、兌換、投資等證明單據。八、歸公財物、沒收財物、贈與及遺贈之財物目錄及證明書類。九、稅賦捐費等之徵課查定，及其他依法處理之書據票照之領發，及徵課物處理之書據。十、罰款賠款經過之書據。十一、公債發行之法令，還本付息之本息票，及處理申溢折扣之計算書表。十二、成本計算之單據。十三、盈虧處理之書據。十四、會計報告書表。十五、其他可資證明第三條各款事項發生經過之單據或其他書類。前項各種憑證之附屬書類，視為各該憑證之一部。
+* 61 成本會計事務，對於成本要素，應為詳備之紀錄及精密之計算，分別編造明細報告表，並比較分析其增減原因。
 
-* 62 原始憑證有左列情形之一者，不生效力：一、依照法律或習慣應有之主要書據缺少或形式不具備者。二、應經事前審計或稽察，始得舉辦之事項，而未經該管人員簽名蓋章者。三、應經經手人及點收人簽名蓋章，而未經其簽名蓋章者。四、書據之數字或文字有塗改痕跡，而塗改處未經負責人員簽名蓋章證明者。五、書據上表示金額或數量之文字號碼不符者。六、其他與法令不合者。
+* 62 除本條第二項及第三項之轉帳傳票外，各種傳票於記入序時帳簿時，設有明細分類帳簿者，並應同時記入關係之明細分類帳簿。特種序時帳簿之按期結算，應過入總分類帳簿者，應先以其結數造具轉帳傳票，記入普通序時帳簿，始行過帳。但特種序時帳簿僅為現金出納序時帳簿一種者，得直接過入總分類帳簿。公務財物、特種財物，應就其明細分類帳簿按期結算，以其結數造具轉帳傳票，過入另設之統制帳簿。
 
-* 63 記帳憑證為左列三種：一、收入傳票。二、支出傳票。三、轉帳傳票。前項各種傳票，應以顏色或其他方法區別之。
+* 63 各種特種序時帳簿，應於左列時期結總：一、每月終了時，遇事實上有需要者，得每月、每週、每五日或每日為之，均應另為累計之總數。二、各種會計事務之主管或主辦人員交代時。三、機關或基金結帳時。普通序時帳簿，於每月終了時、機關結帳時或主辦會計人員交代時，亦應結總。
 
-* 64 各種傳票應為左列各款之記載：一、年月日。二、會計科目。三、事由。四、本位幣數目，不以本位幣計數者，其貨幣之種類數目及折合率。五、有關之原始憑證、種類、張數及其號數、日期。六、傳票號數。七、其他備查要點。
+* 64 各機關或基金有左列情形之一時，應辦理結帳或結算：一、會計年度終了時。二、有每月、每季或每半年結算一次之必要者，其每次結算時。三、非常事件，除第一款、第二款情形外，其事件終了時。四、機關裁撤或基金結束時。
 
-* 65 各種傳票，非經左列各款人員簽名蓋章不生效力，但實際上無某款人員者缺之：一、機關長官或其授權代簽人。二、事項之主管或主辦人員。三、主辦事前審計人員。四、主辦會計人員。五、關係現金票據證券出納保管移轉之事項時，主辦出納事務人員。六、關係財物增減保管移轉之事項時，主辦經理事務人員。七、製票員。八、登記員。前項第一款第二款人員，已於原始憑證上為負責之表示者，傳票上得不簽名蓋章。
+* 65 各種分類帳簿之各帳目所有預收、預付、到期未收、到期未付及其他權責已發生而帳簿尚未登記之各事項，均應於結帳前先為整理紀錄。公有營業之會計事務，除為前項之整理紀錄外，對於呆帳、折舊、耗竭、攤銷，及材料、用品、產品等盤存，與內部損益銷轉，或其他應為整理之事項，均應為整理紀錄。各單位會計或附屬單位會計有所屬分會計者，應俟其所屬分會計之結帳報告到達後，再為整理紀錄。但所屬分會計因特殊事故，其結帳報告不能按期到達時，各該單位會計或附屬單位會計得先行整理結帳，加註說明，俟所屬分會計報告到達後，再行補作紀錄，整理結帳。
 
-* 66 會計報告表及其他原始憑證，其格式合於前二條之需要者，得用作記帳憑證，免製傳票。
+* 66 各帳目整理後，其借方、貸方之餘額，應依左列規定處理之：一、公務之會計事務及公有事業之會計事務，各收支帳目之餘額，應分別結入歲入預算及經費預算之各種帳目，以計算歲入及經費之餘絀。二、公有營業之會計事務，各損益帳目之餘額，應結入總損益之各種帳目，以為損益之計算。三、前二款會計事務，有關資產、負債性質各帳目之餘額，應轉入下年度或下期各該帳目。
 
-* 67 各分會計機關之事務簡單者，其原始憑證經機關長官及主辦會計人員簽名蓋章後，得用作記帳憑證免製傳票。
+* 67 會計報告、帳簿及重要備查帳或憑證內之記載，繕寫錯誤而當時發現者，應由原登記員劃線註銷更正，於更正處簽名或蓋章證明，不得挖補、擦、刮、或用藥水塗滅。前項錯誤，於事後發現，而其錯誤不影響結數者，應由查覺人將情形呈明主辦會計人員，由主辦會計人員依前項辦法更正之；其錯誤影響結數者，另製傳票更正之。採用機器處理會計資料或貯存體之錯誤，其更正辦法由中央主計機關另定之。因繕寫錯誤而致公庫受損失者，關係會計人員應負連帶損害賠償責任。
 
-* 68 各機關零用金之支出及有收入之公務機關之收入，其對於特種序時帳簿及明細分類帳簿之入帳，得以原始憑證用作記帳憑證。但於特種序時帳簿之結數記入普通序時帳簿時，仍應先製傳票始得記入。
+* 68 帳簿及重要備查簿內，如有重揭兩頁，致有空白時，將空白頁劃線註銷；如有誤空一行或二行，一列或二列者，應將誤空之行列劃線註銷，均應由登記員及主辦會計人員簽名或蓋章證明。
 
-* 69 公有營業或事業機關，對於特種序時帳簿及明細分類帳簿之入帳，得以營業或事業收入之單據成本計算之單據用作記帳憑證，但於特種序時帳簿之結數記入普通序時帳簿時，仍應先製傳票始得記入。
+* 69 各傳票入帳後，應依照類別與日期號數之順序，彙訂成冊，另加封面並於封面詳記起訖之年、月、日、張數及號數，由會計人員保存備核。
 
-* 70 各級政府所屬各機關之會計事務，由各該管主計機關派駐之主辦會計人員綜理、監督、指揮之。
+* 70 原始憑證，除依法送審計機關審核者外，應逐一標註傳票編號，附同傳票，依前條規定辦理；其不附入傳票保管者，亦應標註傳票編號，依序黏貼整齊，彙訂成冊，另加封面，並於封面詳記起訖之年、月、日、頁數及號數，由主辦會計人員於兩頁間中縫與每件黏貼邊縫，加蓋騎縫印章，由會計人員保存備核。但原始憑證便於分類裝訂成冊者，得免黏貼。依第九條集中處理會計事務者，其原始憑證之整理及保管，得由中央主計機關另訂辦法處理之。
 
-* 71 各機關辦理第五條至第七條所列各種會計事務之佐理人員，均應由主計機關派充，除直接對於前條主辦會計人員負責外，並依其性質，分別對於各類事務之主管或主辦人員負責，而受其指揮。第八條各種會計事務之統制會計，應由主辦會計人員為之。第一項會計事務與非會計事務之劃分，應由主計機關長官會同關係機關長官核定。但法令另有規定者，依其規定。
+* 71 左列各種原始憑證，不適用前條之規定。但仍應於前條冊內註明其保管處所及其檔案編號，或其他便於查對之事實：一、各種契約。二、應另歸檔案之文書及另行訂冊之報告書表。三、應留待將來使用之存取或保管現金、票據、證券及財物之憑證。四、應轉送其他機關之文件。五、其他事實上不能或不應黏貼訂冊之文件。
 
-* 72 第五條至第七條所列各種會計事務，在事務簡單之機關得合併或委託辦理。但會計事務設有專員辦理者，不得兼辦出納或經理財物之事務。
+* 72 各種帳簿之首頁，應標明機關名稱、帳簿名稱、冊次、頁數、啟用日期，並由機關長官及主辦會計人員簽名或蓋章。
 
-* 73 各機關行政長官，得派員隨時核對各種會計記載，與各種會計報告，及第三十六條關於該機關之差額解釋表。
+* 73 各種帳簿之末頁，應列經管人員一覽表，填明主辦會計人員及記帳、覆核等關係人員之姓名、職務與經管日期，並由各本人簽名或蓋章。
 
-* 74 主計機關得隨時派員赴各機關，視察會計制度之實施狀況，與會計人員之辦理情形。
+* 74 各種帳簿之帳頁，均應順序編號，不得撕毀。總分類帳簿及明細分類帳簿，並應在帳簿前加一目錄。
 
-* 75 各機關之會計憑證、會計報告及已記載完畢之會計簿籍等檔案，於總決算公布日後，應由主辦會計人員移交所在機關管理檔案人員保管之。會計檔案遇有遺失損毀等情事時，應即呈報該管上級主辦會計人員或主計機關及所在機關長官與該管主辦審計人員，分別轉呈各該管最上級機關，非經審計機關認為其對於良善管理人應有之注意並無怠忽，且予解除責任者應付懲戒。遇有前項情事，匿不呈報者，從重懲戒。因第二項或第三項情事致公庫受損害者，負賠償責任。
+* 75 活頁帳簿每用一頁，應由主辦會計人員蓋章於該頁之下端；其首頁、末頁適用第七十二條、第七十三條之規定。但免填頁數，另置頁數累計表及臨時目錄於首頁之後，裝訂時應加封面，並為第七十四條之手續，隨將總頁數填入首頁。卡片式之活頁不能裝訂成冊者，應由經管人員裝匣保管。除總會計外，序時帳簿與分類帳簿不得同時並用活頁。
 
-* 76 各級政府所屬各機關主辦會計人員及其佐理人員之任免、遷調、訓練及考績，由各該政府之主計機關，依法為之。
+* 76 各種帳簿，除已用盡者外，在決算期前，不得更換新帳簿；其可長期賡續記載者，在決算期後，亦無庸更換。更換新帳簿時，應於舊帳簿空白頁上，逐頁註明空白作廢字樣。
 
-* 77 主辦會計人員與所在機關長官因會計事務發生爭執時，由該管上級機關之主管長官及其主辦會計人員處理之，會計人員有違法或失職情事時，經所在機關長官函達主計機關長官，應即依法處理之。
+* 77 採用機器處理會計資料者，因機器性能限制，得不適用第六十八條、第七十二條至第七十六條之規定。
 
-* 78 各機關主辦會計事務之人員，對於不合法之會計程序或會計文書，應使之更正，不更正者，應拒絕之，並報告該機關主管長官。前項不合法之行為，由於該機關主管長官之命令者，應以書面聲明異議，如不接受時，應報告該管主辦審計人員及該機關之主管上級機關長官與其主計會計人員或主計機關。不為前二項之異議及報告時，關於不合法行為之責任，主辦會計人員應連帶負之。
+* 78 使用完畢之會計報告、簿籍、及機器處理會計資料之貯存體及裝訂成冊之會計憑證，均應分年編號收藏，並製目錄備查。
 
-* 79 主辦會計人員之請假或出差，應呈請該管上級機關之主辦會計人員或主計機關指派人員代理，其期間不逾一個月者，得自行委託人員代理。但仍應先期呈報，並連帶負責。
+* 79 各項會計報告，應由機關長官及主辦會計人員簽名或蓋章；其有關各類主管或主辦人員之事務者，並應由該事務之主管或主辦人員會同簽名或蓋章。但內部使用之會計報告，機關長官免予簽名或蓋章。前項會計報告經彙訂成冊者，機關長官及主辦會計人員得僅在封面簽名或蓋章。
 
-* 80 會計人員不得兼營會計師、律師業務或兼任公務機關、公私營業機關之職務。
+* 80 會計報告簿籍及憑證上之簽名或蓋章，不得用別字或別號。
 
-* 81 主計機關派駐各機關之辦理會計人員所需一切費用，應列入所在機關之經費預算。
+* 81 第三十二條第一項第一款至第四款之報告，應各編以順序號數，其號數均應每年度重編一次。但在會計年度終了後整理期間內補編之報告，仍續編該終了年度之順序號數。
 
-* 82 會計人員非根據合法之原始憑證，不得造具記帳憑證，非根據合法之記帳，憑證不得記帳。但整理結算及結算後轉入帳目等事項無原始憑證者，不在此限。
+* 82 總會計年度報告之公告，依決算法之規定。各機關會計月報，應由會計人員按月向該機關公告之。但其中應保守秘密之部分，得不公告。各該機關人員對前項公告有疑義時，得向會計人員查詢之。
 
-* 83 第六十條至第六十七條之會計憑證，關係現金、票據、證券之出納者，非經主辦會計人員簽名蓋章，不得為出納之執行。
+* 83 各種會計憑證，均應自總決算公布或令行日起，至少保存二年；屆滿二年後，除有關債權、債務者外，經該管上級機關與該管審計機關之同意，得予銷毀。前項保存期限，如有特殊原因，亦得依上述程序延長或縮短之。
 
-* 84 大宗財物之增減、保管、移轉，應隨時造具記帳憑證，但零星消費品材料品之付出，得每月分類彙總造具記帳憑證。
+* 84 各種會計報告、帳簿及重要備查簿，與機器處理會計資料之貯存體暨處理手冊，自總決算公布或令行日起，在總會計至少保存二十年；在單位會計、附屬單位會計至少保存十年；在分會計、附屬單位會計之分會計至少保存五年。其屆滿各該年限者，在總會計經行政長官及審計機關之同意，得移交文獻機關或其他相當機關保管之；在單位會計、附屬單位會計及分會計應經該管上級機關與該管審計機關之同意，始得銷毀之。但日報、五日報、週報、旬報、月報之保存期限，得縮短為三年。前項保存年限，如有特殊原因，得依前項程序縮短之。
 
-* 85 公有營業有永久性財物之折舊與無永久性財物之盤存消耗，應以原價為標準，其原價無可稽考者，以初次入帳時之估價為標準。
+* 85 各級分會計機關之會計報告，應由主辦會計人員依照規定之期日、期間及方式編製之，經該機關長官核閱後，呈送該管上級機關。
 
-* 86 成本會計事務，對於原料、人工及其他費用，應為詳備之紀錄及精密之計算，並分別編造明細報告表。
+* 86 前條報告，經該管上級機關長官核閱後，應交其主辦會計人員查核之；其有統制、綜合之需要者，並應分別為統制之記錄及綜合之報告。
 
-* 87 除本條第二項及第三項之轉帳傳票外，各種傳票於記入序時帳簿時，設有明細分類帳簿者，並應同時記入關係之明細分類帳簿。特種序時帳簿之按期結算，應過入總分類帳簿者，應先以其結數造具轉帳傳票記入普通序時帳簿，始行過帳，但特種序時帳簿僅為現金出納序時帳簿一種者，得直接過入總分類帳簿。公務財務、特種財務，應就其明細分類帳簿按期結算，以其結數造具轉帳傳票，過入另設之統制帳簿。
+* 87 各級分會計機關之會計報告，依次遞送至單位會計或附屬單位會計機關，單位會計或附屬單位會計機關長官核閱後，應交其主辦會計人員查核之；其有統制、綜合之需要者，並應分別為統制之紀錄或綜合之報告，呈送該管上級機關。前項單位會計機關，如為第二級機關單位時，應按其需要，分別報告該級政府之主計、公庫、財物經理及審計等機關。
 
-* 88 各種特種序時帳簿，應於左列時期結總：一、每月終了時遇事實上有需要者，得每、旬每週、每五日或每日為之，均應另為累計之總數。二、第七十一條有關係各類事務之主管或主辦人員交代時。三、機關或基金結帳時。普通序時帳簿，於每月終了時，機關結帳時或主辦會計人員交代時，亦應結總。
+* 88 各單位會計機關得以其報告逕行分送各該政府之主計、公庫、財物經理及審計等機關。但有必要時，亦得呈由上級單位會計機關分別轉送。
 
-* 89 各機關或基金有左列情形之一時，應辦理結帳：一、會計年度終了時。二、有每半年結算一次之必要者，其每次結算時。三、在非常事件除第一款第二款情形外，其事件終了時。四、機關裁撤或基金結束時。
+* 89 各該政府主計機關，接到各單位會計機關、各單位會計基金之各種會計報告後，其有統制、綜合之需要者，應分別為統制之紀錄，以彙編各該政府之會計總報告。
 
-* 90 各種分類帳簿之各帳目所有預收、預付、到期未收、到期未付及其他權責已發生而帳簿尚未登記之各事項，均應於結帳前先為整理紀錄。公有營業之會計事務，除為前項之整理紀錄外，並應對於第四十五條之帳目為整理紀錄。各單位會計或附屬單位會計有所屬分會計者，應俟其所屬分會計之結帳報告到達後，再為整理紀錄，但所屬分會計因特殊事故，其結帳報告不能按期到達時，各該單位會計或附屬單位會計得先行整理結帳，加註說明，俟所屬分會計報告到達後，再行補作紀錄，整理結帳。
+* 90 各該政府主計機關之會計總報告，與其政府之公庫、財物經理、徵課、公債、特種財物及特種基金等主管機關之報告發生差額時，應由該管審計機關核對，並製表解釋之。
 
-* 91 各帳目整理後，其借方、貸方之餘額，應依左列規定處理之：一、公務之會計事務及公有事業之會計事務，各帳目之餘額，應分別結入歲入預算及經費預算之各種帳目，以計算歲入及經費之餘絀。二、公有營業之會計事務，各帳目之餘額，應結入總損益之各種帳目，以為損益之計算。三、前二款會計事務，有資產負債性質各帳目之餘額，應轉入下年度或下期各該帳目。
+* 91 各種會計報告，均應由編製機關存留副本備查。
 
-* 92 會計報告、帳簿及重要備查簿或憑證內之記載，繕寫錯誤而當時發現者，應由原登記員劃線註銷更正，於更正處簽名蓋章證明，不得挖、補、擦、括或用藥水塗滅。前項錯誤，於事後發現，而其錯誤不影響結數者，應由查覺人將情形呈明主辦會計人員，由主辦會計人員依前項辦法更正之，其錯誤影響結數者，應依第六十三條至第六十五條之規定，另製傳票更正之。因繕寫錯誤而致公庫受損失者，關係會計人員應負賠償責任。
+* 92 採用機器集中處理會計資料者，其產生之會計報告或資料，由集中處理機關分送各有關機構。
 
-* 93 帳簿及重要備查簿內，如有重揭兩頁，致有空白時，應將空白頁劃線註銷，如有誤空一行或兩行一列或二列者，應將誤空之行列劃線註銷，均應由登記員及主辦會計人員簽名蓋章證明。
+* 93 各公務機關掌理一種以上之特種公務者，應辦理一種以上之特種公務之會計事務；其兼辦公有營業或其他公有事業者，並應辦理公有營業或公有事業之會計事務。非政府所屬機關代理政府事務者，對於所代理之事務，應依本法之規定，辦理會計事務。
 
-* 94 各傳票入帳後，應依照類別與日期號數之順序，彙訂成冊，另加封面，並於封面詳記起訖之年、月、日張數號數，由會計人員保存備核。
+* 94 各機關會計事務與非會計事務之劃分，應由主計機關會同關係機關核定。但法律另有規定者，依其規定。
 
-* 95 原始憑證應黏貼整齊，依照傳票編號順序，彙訂成冊，另加封面，並於封面詳記起訖之年、月、日、頁數、號數，由主辦會計人員於兩頁間中縫與每件黏貼邊縫，加蓋騎縫印章，由會計人員保存備核，但原始憑證便於分類裝訂成冊者，得免黏貼。
+* 95 各機關實施內部審核，應由會計人員執行之。內部審核分左列二種：一、事前審核：謂事項入帳前之審核，著重收支之控制。二、事後複核：謂事項入帳後之審核，著重憑證、帳表之複核與工作績效之查核。
 
-* 96 左列各種原始簿證，不適用前條之規定。但仍應於前條冊內註明其保管處所及其檔案編號，或其他便於查對之事實：一、各種契約。二、應另歸檔案之文書及另行訂冊之報告書表。三、應留待將來使用之存取或保管現金票據證券財物之憑證。四、應轉送其他機關之文件。五、其他事實上不能或不應黏貼訂冊之件。
+* 96 內部審核之範圍如左：一、財務審核：謂計畫、預算之執行與控制之審核。二、財物審核：謂現金及其他財物之處理程序之審核。三、工作審核：謂計算工作負荷或工作成果每單位所費成本之審核。
 
-* 97 各種帳簿之首頁，應標明機關名稱、帳簿名稱、冊次、頁數、啟用日期，並由機關長官及主辦會計人員簽名蓋章。
+* 97 內部審核之實施，兼採書面審核與實地抽查方式，並應規定分層負責，劃分辦理之範圍。
 
-* 98 各種帳簿之末頁，應列經管人員一覽表，填明主辦會計人員及記帳覆核等關係人員之姓名，職務，經管日期，並由各本人簽名蓋章。
+* 98 會計人員為行使內部審核職權，向各單位查閱簿籍、憑證暨其他文件，或檢查現金、財物時，各該負責人不得隱匿或拒絕。遇有疑問，並應為詳細之答復。會計人員行使前項職權，遇必要時，得報經該機關長官之核准，封鎖各項有關簿籍、憑證或其他文件，並得提取其一部或全部。
 
-* 99 各種帳簿之帳頁，均應順序編號，不得撕毀。總分類帳簿及明細分類帳簿，並應在帳簿前加一目錄。
+* 99 各機關主辦會計人員，對於不合法之會計程序或會計文書，應使之更正；不更正者，應拒絕之，並報告該機關主管長官。前項不合法之行為，由於該機關主管長官之命令者，應以書面聲明異議；如不接受時，應報告該機關之主管上級機關長官與其主辦會計人員或主計機關。不為前二項之異議及報告時，關於不合法行為之責任，主辦會計人員應連帶負之。
 
-* 100 活頁帳簿每用一頁，應由主辦會計人員蓋章於該頁之下端；其首頁、末頁適用第九十七條、第九十八條之規定。但免填頁數，另置頁數累計表及臨時目錄於首頁之後裝訂時，應另加封面，並為第九十九條之手續，隨將總頁數填入首頁。卡片式之活頁不能裝訂成冊者，應由經管人員裝匣保管。除總會計外，序時帳簿與分類帳簿不得同時並用活頁。
+* 100 各機關會計人員對於財物之訂購或款項之預付，經查核與預算所定用途及計畫進度相合者，應為預算之保留。關係經費負擔或收入一切契約，及大宗動產、不動產之買賣契約，非經會計人員事前審核簽名或蓋章，不生效力。
 
-* 101 各種帳簿，除已經用盡者外，在決算期前，不得更換新帳簿；其可長期賡續記載者，在決算期後，亦無庸更換。
+* 101 會計憑證關係現金、票據、證券之出納者，非經主辦會計人員或其授權人之簽名或蓋章，不得為出納之執行。對外之收款收據，非經主辦會計人員或其授權人之簽名或蓋章者，不生效力。但有特殊情形者，得報經該管主計機關核准，另定處理辦法。
 
-* 102 更換新帳簿時，應於舊帳簿空白頁上，逐頁註明空白作廢字樣。
+* 102 各機關會計人員審核原始憑證，發現有左列情形之一者，應拒絕簽署：一、未註明用途或案據者。二、依照法律或習慣應有之主要書據缺少或形式不具備者。三、應經招標、比價或議價程序始得舉辦之事項，而未經執行內部審核人員簽名或蓋章者。四、應經機關長官或事項之主管或主辦人員之簽名或蓋章，而未經其簽名或蓋章者。五、應經經手人、品質驗收人、數量驗收人及保管人簽名或蓋章而未經其簽名或蓋章者；或應附送品質或數量驗收之證明文件而未附送者。六、關係財物增減、保管、移轉之事項時，應經主辦經理事務人員簽名或蓋章，而未經其簽名或蓋章者。七、書據之數字或文字有塗改痕跡，而塗改處未經負責人員簽名或蓋章證明者。八、書據上表示金額或數量之文字、號碼不符者。九、第三款及第五款所舉辦之事項，其金額已達稽察限額之案件，未經依照法定稽察程序辦理者。十、其他與法令不符者。前項第四款規定之人員，得由各機關依其業務規模，按金額訂定分層負責辦法辦理之。
 
-* 103 使用完畢之會計報告簿籍及裝訂成冊之會計憑證，均應分年編號收藏，並製目錄備查。
+* 103 會計人員執行內部審核事項，應依照有關法令辦理；非因違法失職或重大過失，不負損害賠償責任。
 
-* 104 各項會計報告，應由機關長官及主辦會計人員製表員覆核員簽名蓋章；其有關於第七十一條各類主管或主辦人員之事務者，並應由各該事務之主管或主辦人員會同簽名蓋章。
+* 104 各該政府所屬各機關主辦會計人員及其佐理人員之任免、遷調、訓練及考績，由各該政府之主計機關依法為之。
 
-* 105 會計報告簿籍及憑證上之簽名蓋章，不得用別字或別號。
+* 105 主計機關派駐各機關之辦理會計人員所需一般費用，應列入所在機關之經費預算；其屬專案業務費，得列入該管主計機關之預算。
 
-* 106 各種會計憑證，均應自總決算公布日起，至少保存五年，其屆滿五年者，應經該管上級機關與該管審計機關之同意，始得銷燬之。
+* 106 各該政府所屬各機關之會計事務，由各該管主計機關派駐之主辦會計人員綜理、監督、指揮之；主計機關得隨時派員赴各機關視察會計制度之實施狀況，與會計人員之辦理情形。
 
-* 107 各種會計報告、帳簿及重要備查簿，自總決算公布日起，在總會計至少保存三十年，在單位會計、附屬單位會計至少保存二十年；在分會計、附屬單位會計之分會計，至少保存十年。其屆滿各該期限者，在總會計經行政長官及審計機關之同意，得移交文獻機關或其他相當機關保管之，在單位會計、附屬單位會計及分會計應經該管上級機關與該管審計機關之同意，始得銷燬之。但日報五日報週報旬報月報之保存期限，得縮短為五年。
+* 107 各機關辦理第五條至第七條所列各種會計事務之佐理人員，均應由主計機關派充，除直接對於前條主辦會計人員負責外，並依其性質，分別對於各類事務之主管或主辦人員負責，而受其指揮。
 
-* 108 各級分會計機關之會計報告，應由主辦會計人員依照規定之期日、期間及方式編製之，經該機關長官核閱後，呈送該管上級機關。
+* 108 第五條至第七條所列各種會計事務，在事務簡單之機關得合併或委託辦理。但會計事務設有專員辦理者，不得兼辦出納或經理財物之事務。
 
-* 109 前條報告，經該管上級機關長官核閱後，應交其主辦會計人員查核之，其有統制綜合之需要者，主辦會計人員應分別為統制之紀錄及綜合之報告。
+* 109 各機關之會計憑證、會計報告及記載完畢之會計簿籍等檔案，於總決算公布或令行日後，應由主辦會計人員移交所在機關管理檔案人員保管之，但使用機器處理會計資料所用之儲存體，得另行處理之。會計檔案遇有遺失、損毀等情事時，應即呈報該管上級主辦會計人員或主計機關及所在機關長官與該管審計機關，分別轉呈各該管最上級機關，非經審計機關認為其對於良善管理人應有之注意並無怠忽，且予解除責任者，應付懲戒。遇有前項情事，匿不呈報者，從重懲戒。因第二項或第三項情事，致公庫受損害者，負賠償責任。
 
-* 110 各級分會計機關之會計報告，依次遞送至單位會計或附屬單位會計機關，單位會計或附屬單位會計機關長官核閱後，應交其主辦會計人員查核之，其有統制綜合之需要者，主辦會計人員應分別為統制之紀錄及綜合之報告，呈送該管上級機關。前項單位會計機關，如為第二級預算機關單位時，應按其需要，分別報告該級政府之主計、公庫、財物經理、審計等機關。
+* 110 主辦會計人員與所在機關長官因會計事務發生爭執時，由該管上級機關之主管長官及其主辦會計人員處理之。會計人員有違法或失職情事時，經所在機關長官函達主計機關長官，應即依法處理之。
 
-* 111 上級單位會計機關對於下級單位會計機關之各種會計報告，除法令另有規定外，得不經統制、綜合之程序，以其原報告分別轉送各該政府之主計、公庫、財物經理、審計等機關，有必要時，下級單位會計機關亦得以其報告分送各該主計、公庫、財物經理、審計等機關。
+* 111 主辦會計人員之請假或出差，應呈請該管上級機關之主辦會計人員或主計機關指派人員代理；其期間不逾一個月者，得自行委託人員代理。但仍應先期呈報，並連帶負責。
 
-* 112 各級政府主計機關接到各單位會計機關、各單位會計基金之各種會計報告後，其有統制、綜合之需要者，應分別為統制之紀錄，以彙編各該政府之會計總報告。
+* 112 會計人員不得兼營會計師、律師業務，除法律另有規定外，不得兼任公務機關、公私營業機構之職務。
 
-* 113 各級政府主計機關之會計總報告，與其政府之公庫、財物經理、徵課、公債等總管理機關之總報告，或特種財物特種基金總管理機關或其他之總報告發生差額時，應由各該政府審計機關核對，並製表解釋之。
+* 113 會計人員經解除或變更其職務者，應辦交代。但短期給假或因公出差者，不在此限。
 
-* 114 各種會計報告，均應由編製之機關存留副本備查。
+* 114 主辦會計人員辦理交代，應由所在機關長官或其代表及上級機關主辦會計人員或其代表監交。前項人員交代時，應將印信、文件及其他公有物與其經管之會計憑證、會計簿籍、會計報告、機器處理會計資料之貯存體、機器處理會計手冊，造表悉數交付後任，其已編有目錄者，依目錄移交，得不另行造表。
 
-* 115 會計人員經解除或變更其職務者，應辦交代。但短期給假或因公出差者，不在此限。
+* 115 會計佐理人員辦理交代，應由主辦會計人員或其代表監交；交代時，應將業務上所用之章戳、文件、簿籍及其他公有物並經辦未了事件，造表悉數交付後任。
 
-* 116 主辦會計人員辦理交代，應由所在機關長官或其代表及上級機關主辦會計人員或其代表監交，無上級機關者，由該管審計人員監交。前項人員交代時，應將圖記文件及其他公有物及其經管之會計憑證、會計簿籍、會計報告，造表悉數交付後任。其已編有目錄者，依目錄移交，得不另行造表。
+* 116 交代人員應將經管帳簿及重要備查簿，由前任人員蓋章於其經管最末一筆帳項之後；新任蓋章於其最初一筆帳項之前。均註明年、月、日，證明責任之終始。
 
-* 117 會計佐理人員辦理交代，應由主辦會計人員或其代表監交，交代時，應將圖記、文件、簿籍及其他公有物，並經辦未了事件，造表悉數交付後任。
+* 117 主辦會計人員，應自後任接替之日起五日內交代清楚，非取得交代證明書後，不得擅離任所。但前任因病卸職或在任病故時，得由其最高級佐理人員代辦交代，均仍由該前任負責。後任接受移交時，應即會同監交人員，於二日內依據移交表或目錄，逐項點收清楚，出具交代證明書，交前任收執，並會同前任呈報所在機關長官及各該管上級機關。但移交簿籍之內容，仍由前任負責。
 
-* 118 交代人員應將經管帳簿及重要備查簿，由前任人員蓋章於其經管最末一筆帳項之後，新任蓋章於其最初一筆帳項之前，均註明年月日證明責任之終始。
+* 118 會計佐理人員，自後任接替之日起二日內交代清楚，除因病卸任者，得委託代辦交代外，其在任病故者之交代，應由其該管上級人員為之。
 
-* 119 主辦會計人員，應自後任接受之日起十日內交代清楚，非取得交代證明書後，不得擅離任地。但前任因病卸職或在任病故時，得由其最高級佐理人員代辦交代，均仍由該前任負責。後任接受移交時，應即會同監交人員，於五日內依據移交表或目錄，逐項點收清楚，出具交代證明書，交前任收執，並會同前任呈報所在機關長官及各該管上級機關。但移交簿籍之內容，仍由前任負責。
+* 119 會計人員交代不清者，應依法懲處；因而致公庫損失者，並負賠償責任，與交代不清有關係之人員，應連帶負責。
 
-* 120 會計佐理人員，應自後任接替之日起三日內交代清楚，除因病卸任者，得委託代辦交代外，其在任病故者之交代，應由其該管上級人員為之。
+* 120 因機關被裁或基金結束而交代時，交代人員視為前任，接受人員視為後任；其交代適用本章之規定。
 
-* 121 會計人員交代不清者，應依法懲處，因而致公庫受損失者，並負賠償責任；與交代不清有關係之人員，應連帶負責。
+* 121 受政府輔助之民間團體及公私合營之事業，其會計制度及其會計報告程序，準用本法之規定；其適用範圍，由中央主計機關酌定之。
 
-* 122 因機關被裁或基金結束而交代時，交代人員視為前任，接收人員視為後任，其交代適用本章之規定。
+* 122 本法自公布日施行。
 
 * 123 中央政府之各種會計制度，由最高主計機關頒行之，省市政府之各種會計制度，除法令另有規定外，由各該政府之主計機關擬訂，呈經最高主計機關核定頒行之。
 
