--- a/司法-民事/非訟事件法.md
+++ b/司法-民事/非訟事件法.md
@@ -1,10 +1,10 @@
 * 1 法院管轄之非訟事件，除法律另有規定外，適用本法之規定。
 
-* 2 非訟事件之管轄，法院依住所而定者，在中華民國無住所或住所不明時，以在中華民國之居所視為住所；無居所或居所不明者，以其在中華民國最後之住所視為住所。無最後住所者，以財產所在地或最高法院所指定之法院為管轄法院。
+* 2 非訟事件之管轄，法院依住所而定者，在中華民國無住所或住所不明時，以在中華民國之居所視為住所；無居所或居所不明者，以其在中華民國最後之住所視為住所。被告住所地之法院，不能行使職權者，由其居所地之法院管轄。無最後住所者，以財產所在地或最高法院所指定之法院為管轄法院。
 
-* 3 數法院俱有管轄權者，由受理在先之法院管轄之；但法院得依聲請或依職權，以裁定將事件移送於認為適當之其他管轄法院。移送事件之聲請被駁回者，不得聲明不服。民事訴訟法第三十條之規定，於第一項但書情形準用之。
+* 3 數法院俱有管轄權者，由受理在先之法院管轄之。但法院得依聲請或依職權，以裁定將事件移送於認為適當之其他管轄法院。移送事件之聲請被駁回者，不得聲明不服。民事訴訟法第三十條之規定，於第一項但書情形準用之。
 
-* 4 有左列各款情形之一者，直接上級法院應依關係人之聲請或法院之請求，指定管轄：一、有管轄權之法院，因法律或事實不能行使職權者。二、因管轄區域不明，致不能辨別有管轄權之法院者。三、數法院於管轄權有爭議者。直接上級法院不能行使職權者，管轄之指定由再上級法院為之。指定管轄之裁定，不得聲明不服。
+* 4 有左列各款情形之一者，直接上級法院應依關係人之聲請或法院之請求，指定管轄：一、有管轄權之法院，因法律或事實不能行使職權者。二、因管轄區域不明，致不能辨別有管轄權之法院者。三、數法院於管轄權有爭議者。直接上級法院不能行使職權者，管轄之指定，由再上級法院為之。指定管轄之裁定，不得聲明不服。
 
 * 5 民事訴訟法有關法院職員迴避之規定，於非訟事件準用之。
 
@@ -12,9 +12,9 @@
 
 * 7 民事訴訟法有關訴訟代理人及輔佐人之規定，於非訟事件準用之。
 
-* 8 非訟事件程序費用，除法律另有規定外，由聲請人負擔；但檢察官為聲請時，由國庫負擔。
+* 8 非訟事件程序費用，除法律另有規定外，由聲請人負擔。但檢察官為聲請時，由國庫負擔。前項費用之負擔有相對人者，準用民事訴訟法有關訴訟費用之規定。
 
-* 9 因可歸責於關係人之事由，致生無益之費用時，法院得以裁定命其負擔費用之全部或一部。
+* 9 因可歸責於關係人之事由，致生無益之費用時，法院得以裁定，命其負擔費用之全部或一部。
 
 * 10 民事訴訟法第八十五條之規定，於應共同負擔費用之人準用之。
 
@@ -22,193 +22,203 @@
 
 * 12 對於費用之裁定，得為強制執行之名義。
 
-* 13 依職權調查、傳喚、通知及其他必要處分之費用，得由國庫墊付之。
+* 13 聲請或陳述，除另有規定外，得以書面或言詞為之。以言詞為聲請或陳述時，應在法院書記官前為之。前項情形，法院書記官應作成筆錄，並於筆錄內簽名。
 
-* 14 聲請或陳述除另有規定外，得以書面或言詞為之。以言詞為聲請或陳述時，應在法院書記官前為之。前項情形法院書記官應作成筆錄，並於筆錄內簽名。
+* 14 聲請書狀或筆錄，應載明左列各款事項：一、聲請人之姓名、性別、年齡、籍貫、職業及住、居所；聲請人為法人或其他團體者，其名稱及事務所或營業所。二、有代理人者、其姓名、性別、年齡、籍貫、職業及住、居所。三、聲請之意旨及其原因、事實。四、供證明或釋明用之證據。五、附屬文件及其件數。六、法院。七、年、月、日。聲請人或其代理人，應於書狀或筆錄內簽名；其不能簽名者，得使他人代書姓名，由聲請人或其代理人蓋章或按指印。
 
-* 15 聲請書狀或筆錄，應載明左列各款事項：一、聲請人之姓名、性別、年齡、籍貫、職業及住居所，聲請人為法人或其他團體者，其名稱及事務所或營業所。二、有代理人者，其姓名、性別、年齡、籍貫、職業及住居所。三、聲請之意旨及其原因事實。四、供證明或釋明用之證據。五、附屬文件及其件數。六、法院。七、年、月、日。聲請人或其代理人，應於書狀或筆錄內簽名，其不能簽名者，得使他人代書姓名，由聲請人或其代理人蓋章或按指印。
+* 15 民事訴訟法有關送達期日、期間、證據及釋明方法之規定，於非訟事件準用之。
 
-* 16 民事訴訟法有關期日、期間、人證、鑑定、書證、勘驗及釋明方法之規定，於非訟事件準用之。
+* 16 法院應依職權，調查事實及必要之證據。
 
-* 17 法院應依職權調查事實及必要之證據。
+* 17 關於事實及證據之調查、傳喚、通知及裁定之執行，得依囑託為之。
 
-* 18 關於事實及證據之調查、傳喚、通知及裁定之執行，得依囑託為之。
+* 18 訊問關係人、證人或鑑定人，不公開之。但法院認為適當時，得許旁聽。
 
-* 19 訊問關係人、證人或鑑定人不公開之；但法院認為適當時得許旁聽。
+* 19 訊問應作成筆錄。
 
-* 20 訊問應作成筆錄。
+* 20 非訟事件之處分，以裁定為之。民事訴訟法第二百三十二條、第二百三十三條及第二百三十七條之規定，於前項裁定準用之。
 
-* 21 非訟事件之處分，以裁定為之。民事訴訟法第二百三十七條之規定，於前項裁定準用之。
+* 21 裁定應作成裁定書，由推事簽名。但得於聲請書或筆錄上記載裁定，由推事簽名以代原本。裁定之正本及節本，由書記官簽名，並蓋法院印信。
 
-* 22 裁定應作成裁定書，由推事簽名，但得於聲請書或筆錄上記載裁定，由推事簽名以代原本。裁定之正本及節本，由書記官簽名，並蓋法院印。
+* 22 裁定確定後，法院書記官應付與裁定確定證明書。裁定確定證明書，由地方法院書記官付與之。但卷宗在上級法院者，由上級法院書記官付與之。
 
-* 23 裁定因通知受裁定人而發生效力。裁定之通知，由法院以適當之方法為之。通知之方法、場所及年、月、日，應記載於裁定原本。
+* 23 法院為裁定後，認為其裁定不當時，得撤銷或變更之。依聲請而為裁定者，其駁回聲請之裁定，非因聲請，不得撤銷或變更之。第一項之裁定，以不得抗告者為限。
 
-* 24 裁定確定後，法院書記官應付與裁定確定證明書。裁定確定證明書，由地方法院書記官付與之；但卷宗在上級法院者，由上級法院書記官付與之。
+* 24 因裁定而權利受侵害者，得為抗告。駁回聲請之裁定，聲請人得為抗告。
 
-* 25 法院為裁定後，認為其裁定不當時，得撤銷或變更之。依聲請而為裁定者，其駁回聲請之裁定，非因聲請不得撤銷或變更之。第一項之裁定，以不得抗告者為限。
+* 25 抗告應向為裁定之原法院或抗告法院提出抗告狀或以言詞為之。以言詞為抗告時，準用第十三條第三項之規定。
 
-* 26 因裁定而權利受侵害者，得為抗告。駁回聲請之裁定，聲請人得為抗告。
+* 26 抗告法院之裁定，應附理由。
 
-* 27 抗告應向為裁定之原法院或抗告法院提出抗告狀或以言詞為之。以言詞為抗告時，準用第十四條第三項之規定。
+* 27 對於抗告法院之裁定，非以其違背法令為理由，不得再為抗告。前項情形，準用民事訴訟法第四百六十八條、第四百六十九條第一款至第四款、第六款、第四百七十五條及第四百七十六條之規定。
 
-* 28 抗告法院之裁定應附理由。
+* 28 抗告及再抗告，除本法另有規定外，準用民事訴訟法關於抗告程序之規定。
 
-* 29 對於抗告法院之裁定，非以其違背法令為理由，不得再為抗告。前項情形準用民事訴訟法第四百六十五條，第四百六十六條第一款至第四款、第六款，第四百七十五條，第四百七十六條之規定。
+* 29 法院對於依法有為一定行為，或不為一定行為，或忍受一定行為之義務者，命其履行而不為履行時，除法律另有規定外，得科以五百元以下之罰鍰，強制其遵守。前項裁定，應附理由，於裁定前應為警告。對於第一項裁定，得為抗告；抗告中應停止執行。
 
-* 30 抗告及再抗告，除本法另有規定外，準用民事訴訟法關於抗告程序之規定。
+* 30 民事訴訟法第二百四十一條至第二百四十三條之規定，於非訟事件準用之。
 
-* 31 法院對於依法有為一定行為或不為一定行為或忍受一定行為之義務者，命其履行而不為履行時，除法律另有規定外，得科以五百元以下之罰鍰，強制其遵守。前項裁定應附理由，於裁定前應為警告。對於第一項裁定得為抗告，抗告中應停止執行。
+* 31 法人登記之主管機關，依民法總則施行法第十條之規定。
 
-* 32 民事訴訟法第二百四十一條至第二百四十三條之規定，於非訟事件準用之。
+* 32 法人設立之登記，除依民法第四十八條第二項及第六十一條第二項規定辦理外，並應附具左列文件：一、主管機關之許可書。二、董事證明資格之文件。三、社員名簿或財產目錄，並其證明文件。
 
-* 33 法人登記之主管機關，依民法總則施行法第十條之規定。
+* 33 法人以事務所之設置，或遷移登記事項之變更、消滅或廢止，為登記或為登記之更正及塗銷者，由董事聲請之。為前項聲請者，應附具聲請事由之證明文件。
 
-* 34 法人設立之登記，除依民法第四十八條第二項及第六十一條第二項規定辦理外，並應附具左列文件：一、主管機關之許可書。二、董事證明資格之文件。三、社員名簿或財產目錄，並其證明文件。
+* 34 登記處於登記後，應發給法人登記證書。
 
-* 35 法人以事務所之設置或遷移登記事項之變更、消滅或廢止，為登記或為登記之更正及塗銷者，由董事聲請之。為前項聲請者，應附具聲請事由之證明文件。
+* 35 法人解散之登記，由清算人聲請之。為前項聲請者，應附具證明清算人資格及證明解散事由之文件。已成立之法人，經主管機關撤銷許可者，準用前二項之規定。法人因法院命令解散者，登記處應依法院囑託為之登記。
 
-* 36 登記處於登記後，應發給法人登記證書。
+* 36 法人之清算人任免或變更之登記，由現任清算人聲請之。為前項聲請者，應附具清算人任免或變更之證明文件。
 
-* 37 法人解散之登記，由清算人聲請之。為前項聲請者，應附具證明清算人資格及證明解散事由之文件。已成立之法人，經主管機關撤銷許可者，準用前二項之規定。法人因法院命令解散者，登記處應依法院囑託為之登記。
+* 37 法人清算終結之登記，由清算人聲請之。為前項聲請者，應附具清算各事項已得承認之證明文件。
 
-* 38 法人之清算人任免或變更之登記，由現任清算人聲請之。為前項聲請者，應附具清算人任免或變更之證明文件。
+* 38 登記處於法人登記之聲請，查有違反民法總則及本法者，應令其補正，始行登記。
 
-* 39 法人清算終結之登記，由清算人聲請之。為前項聲請者，應附具清算各事項已得承認之證明文件。
+* 39 法人已登記之事項，登記處應於登記後三日內公告之。前項公告，應登載公報或該地之新聞紙，並於登記處公告牌公告七日以上。
 
-* 40 登記處於法人登記之聲請，查有違反民法總則及本法者，應令其補正，始行登記。
+* 40 法人登記自為清算終結之登記後，即行銷結。
 
-* 41 法人已登記之事項，登記處應於登記後三日內公告之。前項公告，應登載公報或該地之新聞紙，並於登記處公告牌公告七日以上。
+* 41 本法有關法人登記事項，於外國法人之登記準用之。但法令有特別規定者，不在此限。
 
-* 42 法人登記自為清算終結之登記後，即行銷結。
+* 42 民法第一千零零八條所定之登記，由夫或贅夫之妻之住所地法院管轄；不能在住所地為登記或其主要財產在居所地者，得由居所地之法院管轄。不能依前項規定，定管轄之法院者，由中央政府所在地之法院管轄。
 
-* 43 本法有關法人登記事項，於外國法人之登記準用之；但法令有特別規定者，不在此限。
+* 43 依前條規定為登記之住所或居所有變更時，應於變更後三個月內重為登記；其不重為登記者，前登記簿之登記，因滿三個月而失其效力。
 
-* 44 民法第一千零零八條所定之登記，由夫或贅夫之妻之住所地法院管轄，不能在住所地為登記或其主要財產在居所地者，得由居所地之法院管轄。不能依前項規定定管轄之法院者，由中央政府所在地之法院管轄。
+* 44 法院登記處，應備置夫妻財產制契約登記簿。
 
-* 45 依前條規定為登記之住所或居所有變更時，應於變更後三個月內重為登記，其不重為登記者，前登記簿之登記，因滿三個月而失其效力。
+* 45 夫妻財產制契約之登記，應附具夫妻財產契約書，由契約當事人雙方聲請之。但其契約經公證者，得由一方聲請之。依民法第一千零十條宣告改用分別財產制者，應由法院以確定判決送達於登記處登記之；因夫妻一方破產而成分別財產制者，應由法院以破產宣告通知登記之。依第四十三條重為登記，得由配偶之一方聲請之。但應提出原登記之認證謄本。前三項夫妻財產制契約之登記，對於登記前夫或妻所負債務之債權人，不生效力。亦不影響依其他法律所為財產權登記之效力。
 
-* 46 法院登記處應備置夫妻財產制契約登記簿。
+* 46 法人及夫妻財產制契約登記簿，任何人得向登記處請求閱覽，並得繳納費用，請求交付謄本；其附屬文件，利害關係人得釋明原因，請求閱覽。前項釋明原因，登記處認為不當者，得拒絕其閱覽。
 
-* 47 夫妻財產制契約之登記，應附具夫妻財產契約書，由契約當事人雙方聲請之；但其契約經公證者得由一方聲請之。依民法第一千零十條宣告改用分別財產制者，應由法院以確定判決送達於登記處登記之，因夫妻一方破產而成分別財產制者，應由法院以破產宣告通知登記之。依第四十五條重為登記，得由配偶之一方聲請之；但應提出原登記之認證謄本。
+* 47 法人及夫妻財產制契約登記規則，由司法行政部定之。
 
-* 48 法人或夫妻財產制契約登記簿，任何人得向登記處請求閱覽，並得繳納費用請求交付謄本，其附屬文件，利害關係人得釋明原因請求閱覽。前項釋明原因，登記處認為不當者，得拒絕其閱覽。
+* 48 關於失蹤人之財產管理事件，由其住所地之法院管轄。
 
-* 49 法人及夫妻財產制契約登記規則，由司法行政部定之。
+* 49 失蹤人未置財產管理人者，其財產管理人依左列順序定之：一、配偶。二、父母。三、與失蹤人同居之祖父母。四、家長。不能依前項規定定財產管理人時，法院依利害關係人之聲請，得就其財產之管理，以裁定命為必要之處分，或為選任財產管理人。財產管理人之權限，因死亡、受禁治產或破產之宣告或其他原因消滅時亦同。失蹤人之財產，其取得、設定、喪失或變更，依法應登記者，財產管理人應向該管登記機關登記；其由法院選任或改任者亦同。
 
-* 50 關於失蹤人之財產管理事件，由其住所地之法院管轄。
+* 50 失蹤人之財產管理人，不勝任或管理不適當時，法院得依利害關係人之聲請改任之；其由法院選任者，法院認為必要時得改任之。
 
-* 51 失蹤人未置財產管理人者，其財產管理人依左列順序定之：一、配偶。二、父母。三、與失蹤人同居之祖父母。四、家長。不能依前項規定定管理人時，法院依利害關係人之聲請，得就其財產之管理以裁定命為必要之處分，或為選任管理人。管理人之權限，因死亡、受禁治產或破產之宣告或其他原因消滅時，亦同。
+* 51 法院選任或改任財產管理人時，應詢問利害關係人意見。
 
-* 52 失蹤人之財產管理人，不勝任或管理不適當時，法院得依利害關係人之聲請改任之，其由法院選任者，法院認為必要時得改任之。
+* 52 法院所選任之財產管理人，應作成管理財產目錄，其費用由失蹤人之財產負擔之。
 
-* 53 法院選任或改任管理人時，應詢問利害關係人意見。
+* 53 法院得以裁定命其選任之財產管理人，報告管理財產狀況或計算。前項裁定，不得聲明不服。
 
-* 54 法院所選任之管理人，應作成管理財產目錄，其費用由失蹤人之財產負擔之。
+* 54 利害關係人得釋明原因，聲請閱覽前條之報告及有關計算之文件，或繳納費用聲請其交付謄本。
 
-* 55 法院得以裁定，命其選任之管理人報告管理財產狀況或計算。前項裁定，不得聲明不服。
+* 55 財產管理人應以善良管理人之注意，保存財產，並得為有利於失蹤人之利用或改良行為。但其利用、改良致變更財產之性質者，非經法院許可，不得為之。
 
-* 56 利害關係人得釋明原因，聲請閱覽前條之報告及有關計算之文件，或繳納費用聲請其交付賸本。
+* 56 法院得以裁定命財產管理人就財產之管理及返還，供相當之擔保，並得以裁決增減、變更或免除之。前項裁定，得為抗告。
 
-* 57 管理人應以善良管理人之注意，保存財產，並得為有利於失蹤人之利用或改良行為；但其利用改良致變更財產之性質者，非經法院許可不得為之。
+* 57 法院按財產管理人與失蹤人之關係及其他情形，得就失蹤人之財產，酌給財產管理人相當報酬。
 
-* 58 法院得以裁定命管理人就財產之管理及返還供相當之擔保，並得以裁定增減、變更或免除之。前項裁定，得為抗告。
+* 58 無人承認之繼承財產管理事件，由繼承開始時被繼承人住所地法院管轄。
 
-* 59 法院按管理人與失蹤人之關係及其他情形，得就失蹤人之財產，酌給管理人相當報酬。
+* 59 由親屬會議選定之遺產管理人，有左列各款情形之一者，法院應解任之，命其另選：一、未成年人。二、禁治產人。三、受破產宣告尚未復權者。四、褫奪公權尚未復權者。
 
-* 60 無人承認之繼承財產管理事件，由繼承開始時被繼承人住所地法院管轄。
+* 60 由親屬會議選定之遺產管理人，有左列情形之一者，法院得依利害關係人之聲請，徵詢親屬會議及利害關係人之意見後解任之：一、違背善良管理人之注意義務者。二、有危害管理財產之虞者。三、財產管理上有必要者。
 
-* 61 由親屬會議選定之遺產管理人，有左列各款情形之一者，法院應解任之，命其另選：一、未成年人。二、禁治產人。三、受破產宣告尚未復權者。四、褫奪公權尚未復權者。
+* 61 依民法第一千一百七十八條所為之公示催告，應記載左列事項：一、呈報人之姓名、性別、年齡、籍貫、職業及住、居所。二、被繼承人之姓名、性別、年齡、籍貫、職業及住、居所。三、被繼承人之死亡年、月、日及場所。四、申請權利之期間及期間內應為申報之催告。五、因不申報權利而生之失權效果。六、法院。
 
-* 62 由親屬會議選定之遺產管理人，有左列情形之一者，法院得依利害關係人之聲請，徵詢親屬會議及利害關係人之意見後解任之：一、違背善良管理人之注意義務者。二、有危害管理財產之虞者。三、財產管理上有必要者。
+* 62 民法第三十六條之請求宣告解散事件，第三十八條、第三十九條及第四十二條之有關法人清算事件，第五十一條第三項之許可召集總會事件，第五十八條之聲請解散事件，第六十二條之聲請必要處分事件，第六十三條之聲請變更組織事件，均由法人主事務所所在地法院管轄。
 
-* 63 依民法第一千一百七十八條所為之公示催告，應記載左列事項：一、呈報人之姓名、性別、年齡、籍貫、職業及住居所。二、被繼承人之姓名、性別、年齡、籍貫、職業及住居所。三、被繼承人之死亡年、月、日及場所。四、申請權利之期間及期間內應為申報之催告。五、因不申報權利而生之失權效果。六、法院。
+* 63 依民法第三十六條之規定，主管機關、檢察官或利害關係人聲請宣告解散時，應附具應為解散之法定事由文件；由利害關係人聲請者，其聲請書並應載明其姓名、性別、年齡、籍貫、職業及住、居所，並釋明其利害關係。宣告解散時，法院應囑託法人登記處為之登記。
 
-* 64 民法第三十六條之請求宣告解散事件，第三十八條、第三十九條、第四十二條之有關法人清算事件，第五十一條第三項之許可召集總會事件，第五十八條之聲請解散事件，第六十二條之聲請必要處分事件，第六十三條之聲請變更組織事件，均由法人主事務所所在地法院管轄。
+* 64 依左列規定為聲請時，應附具證明資格及法定事由之文件：一、民法第三十八條利害關係人聲請選任清算人時。二、民法第五十一條第三項社員請求法院為召集總會之許可時。三、民法第五十八條利害關係人聲請解散時。四、民法第六十二條利害關係人聲請法院為必要之處分者。五、民法第六十三條利害關係人聲請變更財團之組織時。前項第三款法院宣告解散時，第五款法院命令財團變更其組織時，應囑託法人登記處為之登記。
 
-* 65 依民法第三十六條之規定，主管機關、檢察官或利害關係人聲請宣告解散時，應附具應為解散之法定事由文件；由利害關係人聲請者，其聲請書並應載明其姓名、性別、年齡、籍貫、職業、住居所及釋明其利害關係。宣告解散時，法院應囑託法人登記所為之登記。
+* 65 法人董事全部不能行使職權，致法人有受損害之虞時，法院因利害關係人或檢察官之請求，得選任臨時管理人，代行董事之職權。但不得為不利於法人之行為。前項臨時管理人，法院應囑託法人登記處為之登記。
 
-* 66 依左列規定為聲請時，應附具證明資格及法定事由之文件。一、民法第三十八條利害關係人聲請選任清算人時。二、民法第五十一條第三項社員請求法院為召集總會之許可時。三、民法第五十八條利害關係人聲請解散時。四、民法第六十二條利害關係人聲請法院為必要之處分時。五、民法第六十三條利害關係人聲請變更財團之組織時。前項第三款法院宣告解散時，第五款法院命令財團變更其組織時，應囑託法人登記所為之登記。
+* 66 民法第五百十八條第二項所定聲請再出新版事件，由出版人營業所所在地或住所地法院管轄。
 
-* 67 民法第五百十八條第二項所定聲請再出新版事件，由出版人營業所所在地或住所地法院管轄。
+* 67 民法第五百二十七條所定容許出版契約關係之聲請，得由出版權授與人之繼承人或法定代理人或其本人或出版人為之。前項聲請事件，由出版人營業所所在地或住所地法院管轄。
 
-* 68 民法第五百二十七條所定容許出版契約關係之聲請，得由出版權授與人之繼承人或法定代理人或其本人或出版人為之。前項聲請事件，由出版人營業所所在地或住所地法院管轄。
+* 68 民法債編施行法第十四條所定之證明，由應變賣地法院公證人、警察機關、商業會或自治機關為之。
 
-* 69 民法債編施行法第十四條所定之證明，由應變賣地法院公證人、警察機關、商會或自治機關為之。
+* 69 民法第八百二十六條第二項所定證書保存人之指定事件，由共有物分割地之法院管轄。法院於裁定前，應訊問共有人。指定事件之程序費用，由分割人共同負擔之。
 
-* 70 民法第八百二十六條第二項所定證書保存人之指定事件，由共有物分割地之法院管轄。法院於裁定前，應訊問共有人。指定事件之程序費用，由分割人共同負擔之。
+* 70 前條之規定，於所有權以外之財產權，由數人共有或公同共有者準用之。
 
-* 71 前條之規定於所有權以外之財產權，由數人共有或公同共有者準用之。
+* 71 民法第八百七十三條所定抵押權人聲請拍賣抵押物事件，由拍賣物所在地法院管轄。拍賣之抵押物，如為未經辦理繼承登記之不動產，執行法院應囑託地政機關辦理繼承登記後拍賣之。
 
-* 72 民法第八百七十三條所定抵押權人聲請拍賣抵押物事件，由拍賣物所在地法院管轄。
+* 72 未成年人無民法第一千零九十四條監護人時，得由利害關係人聲請法院指定之。前項聲請指定事件，由未成年人住所地之法院管轄。
 
-* 73 未成年人無民法第一千零九十四條監護人時，得由利害關係人聲請法院指定之。前項聲請指定事件，由未成年人住所地之法院管轄。
+* 73 民法第一千一百十一條第二項監護人之選定事件，由禁治產人住所地之法院管轄。
 
-* 74 民法第一千一百十一條第二項監護人之選定事件，由禁治產人住所地之法院管轄。
+* 74 由法院所選定之監護人，非有左列各款情形之一者，不得辭任：一、滿六十歲者。二、因殘廢、疾病不能執行監護者。三、住所或居所與法院或受監護人所在地隔離，不便執行監護者。四、有其他重大事由者。
 
-* 75 由法院所選定之監護人，非有左列各款情形之一者，不得辭任。一、滿六十歲者。二、因殘廢、疾病不能執行監護者。三、住所或居所與法院或受監護人所在地隔離，不便執行監護者。四、有其他重大事由者。
+* 75 依民法第一千一百三十二條所定為未成年人及禁治產人聲請指定親屬會議會員時，由未成年人或禁治產人住所地法院管轄。前條之規定於前項情形準用之。第一項之聲請，如不合法或無理由者，其費用由聲請人負擔；有理由者，由未成年人或禁治產人負擔。
 
-* 76 依民法第一千一百三十二條所定為未成年人及禁治產人聲請指定親屬會議會員時，由未成年人或禁治產人住所地法院管轄。第七十五條於前項情形準用之。第一項之聲請如不合法或無理由者，其費用由聲請人負擔；有理由者由未成年人或禁治產人負擔。
+* 76 民法第一千一百五十六條所定繼承之呈報，及第一千一百七十八條所定繼承開始及選定管理人之呈報，由繼承開始時被繼承人住所地法院管轄。呈報書應載明左列事項，由呈報人或其代理人簽名或蓋章：一、呈報人之姓名、性別、年齡、籍貫、職業及住、居所。二、由代理人呈報者，其姓名、性別、年齡、籍貫、職業及住、居所。三、被繼承人之姓名及最後住所。四、呈報之意旨。五、法院。六、年、月、日。
 
-* 77 民法第一千一百五十六條所定繼承之呈報及第一千一百七十八條所定繼承開始及選定管理人之呈報，由繼承開始時被繼承人住所地法院管轄。呈報書應載明左列事項，由呈報人或其代理人簽名或蓋章。一、呈報人之姓名、性別、年齡、職業及住居所。二、由代理人呈報者，其姓名、性別、年齡、職業及住居所。三、被繼承人之姓名及最後住所。四、呈報之意旨。五、法院。六、年、月、日。
+* 77 為遺產聲請指定親屬會議會員時，由繼承開始時被繼承人住所地法院管轄。第七十四條之規定，於前項情形準用之。第一項程序費用，除駁回其聲請，應由聲請人負擔外，由遺產負擔。
 
-* 78 為遺產聲請指定親屬會議會員時，由繼承開始時被繼承人住所地法院管轄。第七十五條於前項情形準用之。第一項程序費用，除駁回其聲請應由聲請人負擔外，由遺產負擔。
+* 78 繼承開始，繼承人有無不明，而不能依民法第一千一百七十七條選定遺產管理人時，得由利害關係人聲請法院指定之。本法及民法關於選定遺產管理人之規定，於前項指定遺產管理人準用之。被繼承人之遺產，依法應登記者，其遺產管理人應向該管登記機關登記；解任另選時亦同。
 
-* 79 繼承開始繼承人有無不明，而不能依民法第一千一百七十七條選定遺產管理人時，得由利害關係人，聲請法院指定之，並準用第六十一條及第六十二條之規定。
+* 79 繼承人因故不能管理遺產，或未委任遺產管理人，被繼承人亦為遺囑指定者，準用前條之規定。前項遺產管理人應於六個月內清償債權，並交付遺贈物，如有賸餘，應提存之；其性質不適於提存者，得於拍賣後提存其價金。
 
-* 80 民法第一千二百十一條所定遺囑執行人之聲請指定事件，及第一千二百十八條所定遺囑執行人之聲請另行指定事件，由繼承開始時被繼承人住所地法院管轄。第七十八條第三項之規定，於前項情形準用之。
+* 80 民法第一千二百十一條所定遺囑執行人之聲請指定事件，及第一千二百十八條所定遺囑執行人之聲請另行指定事件，由繼承開始時被繼承人住所地法院管轄。第七十七條第三項之規定，於前項情形準用之。
 
-* 81 公司法所定公司解散命令事件，由本公司所在地法院管轄。法院為裁定前，應訊問利害關係人。
+* 81 公司法所定由法院處理之公司事件，由本公司所在地法院管轄。公司解散命令事件，法院為裁定前，應訊問利害關係人。
 
-* 82 公司法第一百二十四條所定聲請退股事件，由本公司所在地法院管轄。
+* 82 公司解散命令事件，股東聲請法院准其退股及選派檢查人事件，其聲請應以書面為之。
 
-* 83 公司法第一百十條第三項、第二百四十五條、第三百五十二條第二項、第三百五十八條第二項所定聲請選派檢查人事件，由本公司所在地法院管轄。
+* 83 檢查人之報告，應以書面為之。法院對於前項檢查，認為必要時，得詢問檢查人。
 
-* 84 前三條之聲請，應以書面為之。
+* 84 檢查人之報酬，由公司負擔；其數額由法院徵詢董事及監察人意見後酌定之。
 
-* 85 檢查人之報告，應以書面為之。法院對於前項檢查，認為必要時，得詢問檢查員。
+* 85 對於法院選派或解任公司清算人、檢查人之裁定，不得聲明不服。前項程序費用，除駁回聲請應由聲請人負擔外，由公司負擔。
 
-* 86 檢查人之報酬，由公司負擔，其數額由法院徵詢董事及監察人意見後酌定之。
+* 86 有左列情形之一者，不得選派為清算人：一、未成年人。二、禁治產人。三、褫奪公權尚未復權者。四、受破產宣告尚未復權者。五、曾任清算人而被法院解任者。
 
-* 87 有關公司清算人之選派、解任事件，由本公司所在地法院管轄。對於前項選派或解任之裁定，不得聲明不服。第一項程序費用，除駁回其聲請，應由聲請人負擔外，由公司負擔。
+* 87 第八十四條之規定，於法院選任之清算人準用之。
 
-* 88 有左列情形之一者，不得選派為清算人。一、未成年人。二、禁治產人。三、褫奪公權尚未復權者。四、受破產宣告尚未復權者。五、曾任清算人而被法院解任者。
+* 88 對於法院依公司法規定指定公司簿冊及文件保存人之裁定，不得聲明不服。前項程序費用，由公司負擔。
 
-* 89 第八十六條之規定，於法院選任之清算人準用之。
+* 89 公司法所定股東聲請法院為收買股份價格之裁定事件，法院為裁定前，應訊問公司負責人及為聲請之股東；必要時，得選任檢查人就公司財務實況，命為鑑定。前項股份，如為上市股票，法院得斟酌聲請時當地證券交易所實際成交價格核定之。檢查人之報酬，經法院核定後，除有本法第九條之情形外，由為聲請之股東及公司各半負擔。對於收買股份價格事件之裁定，應附理由，抗告中應停止執行。
 
-* 90 公司法第八十三條及第三百三十四條所定之呈報，及第八十七條第三項及第一百十三條所定清算人，聲請展期結算事件，由本公司所在地法院管轄。
+* 90 公司法第二百六十四條所定公司債債權人會議決議認可事件，由公司債債權人之受託人或債權人會議指定之人向法院申報。本法第八十一條第二項及前條第四項規定，於前項申報事件之裁定準用之。
 
-* 91 公司法第九十三條第一項、第一百十三條及第三百三十一條第四項所定清算完結後之呈報事件，由本公司所在地法院管轄。
+* 91 就公司重整程序所為各項裁定，除公司法另有規定外，準用第八十一條第二項之規定。前項裁定，應附理由；其認可重整計畫之裁定，抗告中應停止執行。
 
-* 92 公司法第三百三十二條及第一百十三條所定聲請指定保存人事件，由本公司所在地法院管轄。對前項指定之裁定，不得聲明不服。第一項之程序費用，由公司負擔。
+* 92 依公司法第二百八十七條第一款及第六款所為之財產保全處分，如其財產依法應登記者，應通知登記機關登記其事由；其財產依法應註冊者亦同。駁回重整聲請裁定確定時，法院應通知登記或註冊機關塗銷前項事由之登記。
 
-* 93 公司法第一百八十七條第二項及第三百十七條第二項所定為收買股份價格之裁定事件，由本公司所在地法院管轄。為前項裁定前，應訊問公司負責人及為聲請之股東；必要時並得選任檢查人就公司財務實況，命為鑑定。前項檢查人之報酬，經法院核定後，除有本法第九條之情形外，由股東及公司各半負擔。第一項之裁定應附理由，抗告中應停止執行。
+* 93 依公司法第二百八十七條第二款、第三款及第五款所為之處分，應黏貼法院牌示處，自牌示之日起發生效力；必要時，並得登載本公司所在地之新聞紙。駁回重整聲請裁定確定時，法院應將前項處分已失效之事由，依原處分公告方法公告之。
 
-* 94 公司法第二百六十四條所定公司債債權人會議決議認可事件，由公司債債權人之受託人向法院申報。本法第八十一條第二項及前條第四項規定，於前項申報事件之裁定準用之。
+* 94 依公司法第三百零五條、第三百零六條第二項至第四項及第三百十條第二項所為裁定，應公告之，毋庸送達。前項裁定及准許開始重整之裁定，其利害關係人之抗告期間，應自公告之翌日起算。第一項之公告方法，準用前條第一項之規定。准許開始重整之裁定，如經抗告者，在駁回重整聲請裁定確定前，不停止執行。
 
-* 95 就公司重整程序所為各項裁定，除公司法另有規定外，準用第八十一條第二項之規定。前項裁定，應附理由；其認可重整計畫之裁定，抗告中應停止執行。
+* 95 公司法第三百三十五條命令開始特別清算，第三百五十條第二項及第三百五十一條協定之認可或變更，準用本法第八十一條第二項，第八十九條第四項及第九十四條之規定。
 
-* 96 依公司法第二百八十七條第一款、第六款所為之財產保全處分，如其財產依法應登記者，應通知登記機關登記其事由；其財產依法應註冊者亦者。
+* 96 公司法第三百五十四條第一款、第二款及第六款之處分，準用本法第九十二條及第九十三條之規定。
 
-* 97 依公司法第二百八十七條第二款、第三款、第五款所為之處分，應黏貼法院牌示處，自牌示之日起發生效力；必要時並得登載本公司所在地之新聞紙。
+* 97 依公司法第三百五十五條宣告破產時，其在特別清算程序之費用，視為破產財團債務。
 
-* 98 依公司法第三百零五條、第三百零六條第二項至第四項及第三百十條第二項所為裁定，應公告之，無庸送達。前項裁定及准許開始重整之裁定，其利害關係人之抗告期間，應自公告之翌日起算。第一項之公告方法，準用前條之規定。
+* 98 海商法第九十四條及第一百零二條第三項所定船長寄存貨物事件，由貨物應受領地之法院管轄。
 
-* 99 公司法第三百三十五條命令開始特別清算，第三百五十條第二項及第三百五十一條協定之認可或變更，準用本法第八十一條第二項、第九十三條第四項及第九十八條之規定。
+* 99 海商法第一百六十一條所定共同海損之計算確定事件，由船籍港或船舶最初到達地之法院管轄。
 
-* 100 公司法第三百五十四條第一款、第二款及第六款之處分，準用本法第九十六條、第九十七條之規定。
+* 100 票據法第一百二十三條所定執票人就本票聲請法院裁定強制執行事件，由票據付款地之法院管轄。
 
-* 101 依公司法第三百五十五條宣告破產時，其在特別清算程序之費用，視為破產財團債務。
+* 101 發票人主張本票係偽造、變造者，應於接到前條裁定後二十日之不變期間內，對執票人向為裁定法院提起確認之訴。發票人證明已依前項規定提起訴訟時，執行法院應停止強制執行。但得依執票人聲請，許其提供相當擔保，繼續強制執行；亦得依發票人聲請，許其提供相當擔保，停止強制執行。
 
-* 102 海商法第九十四條及第一百零二條第三項所定船長寄存貨物事件，由貨物應受領地之法院管轄。
+* 102 因財產權關係為聲請者，按其標的之金額或價額，依左列標準徵收費用：一、未滿五百元者，三元。二、五百元以上未滿千元者，五元。三、千元以上未滿五千元者，十元。四、五千元以上未滿萬元者，十五元。五、萬元以上未滿五萬元者，三十元。六、五萬元以上未滿五十萬元者，五十元。七、五十萬元以上未滿一百萬元者，一百元。八、一百萬元以上未滿二百萬元者，二百元。九、二百萬元以上未滿三百萬元者，三百元。十、三百萬元以上者，四百元。本票聲請裁定強制執行，依前項標準加徵百分之五十。夫妻財產制契約登記後，為變更登記、重為登記或廢止登記者，每件徵收費用三十元。
 
-* 103 海商法第一百六十一條所定共同海損之計算確定事件，由船籍港或船舶最初到達地之法院管轄。
+* 103 非因財產權關係為聲請者，徵收費用三十元。法人設立登記後，為變更登記、解散登記或清算終結登記者，每件徵收費用三十元；為清算人任免或變更登記者，每件徵收費用十五元。
 
-* 104 票據法第一百二十三條所定執票人就本票聲請法院裁定強制執行事件，由票據付款地之法院管轄。
+* 104 非訟事件繫屬法院後，處理終結前，繼續為聲請或聲明異議者，免徵費用。
 
-* 105 法院為前條裁定前，應訊問發票人。但無法通知或經通知而不到場者，不在此限。發票人就本票有偽告、變造之抗辯者，法院為許可執行之裁定時，應命執票人提供相當擔保。
+* 105 對於非訟事件之裁定提起抗告者，徵收費用十元，再抗告者亦同。
 
-* 106 本法施行細則，由行政院定之。
+* 106 請求交付法人登記簿、夫妻財產制契約登記簿或管理財產報告及有關計算文件之謄本者，每一謄本徵收費用十元。
 
-* 107 本法自公布日施行。
+* 107 民事訴訟費用法第四條至第七條、第十五條及第二十四條至第二十九條之規定，於計算非訟事件標的之金額或價額或費用之徵收準用之。其他調查、傳喚、通知及必要處分之費用，參照前項標準，由法院酌定之。
+
+* 108 前條費用，由聲請人預納。但依職權所為之處分，而由國庫墊付者，於核實計算後，向負擔義務人徵收之。
+
+* 109 依法應由關係人負擔費用者，法院裁定命關係人負擔時，應一併確定其數額。前項情形，法院於裁定前，得命關係人提出費用計算書，及釋明費用額之證書。
+
+* 110 第一百零二條、第一百零三條及第一百零五條規定之費用，關係人未預納者，法院得限期命其預納；逾期仍不遵行者，得以裁定駁回之。第一百零六條及第一百零八條前段規定之費用，聲請人未預納者，法院得拒絕其請求。
+
+* 111 本法施行細則，由行政院定之。
+
+* 112 本法自公布日施行。
 
