--- a/司法-民事/票據法.md
+++ b/司法-民事/票據法.md
@@ -8,45 +8,67 @@
 
 * 5 在票據上簽名者，依票上所載文義負責。二人以上共同簽名時，應連帶負責。
 
-* 6 票據上之簽名，得以蓋章或畫押代之。
+* 6 票據上之簽名，得以蓋章代之。
+
+> 釋：畫押為舊時代替簽名之方式。辨別困難，易滋糾紛，票據上尤不宜使用，且目前教育普及，一般人似亦不致不能自為簽名。又有蓋章可以代替，足應需要，畫押方式，擬予刪除。
 
 * 7 票據上記載金額之文字與號碼不符時，以文字為準。
 
-* 8 票據上雖有無行為能力人之簽名，不影響其他簽名者之權利與義務。
+* 8 票據上雖有無行為能力人或限制行為能力人之簽名，不影響其他簽名之效力。
+
+> 釋：限制行為能力人之行為能力並不完全，如簽名於票據仍難生效，但依票據行為獨立性之原則，應亦不影響其他簽名者之效力。故予增列，並改「權利義務」為「效力」，以期更為明確。
 
 * 9 代理人未載明為本人代理之旨而簽名於票據者，應自負票據上之責任。
 
 * 10 無代理權而以代理人名義簽名於票據者，應自負票據上之責任。代理人逾越權限時，就其權限外之部分，亦應自負票據上之責任。
 
-* 11 欠缺本法所規定票據上應記載事項之一者，其票據無效。但本法別有規定者，不在此限。
+* 11 欠缺本法所規定票據上應記載事項之一者，其票據無效。但本法別有規定者，不在此限。執票人善意取得已具備本法規定應記載事項之票據者，得依票據文義行使權利；票據債務人不得以票據原係欠缺應記載事項為理由，對於執票人，主張票據無效。票據上之記載，除金額外，得由原記載人於交付前改寫之。但應於改寫處簽名。
+
+> 釋：我國近年來，經濟繁榮，貿易愈見活躍，當事人間基於事實上之需要，對於票據上部份應記載之事項，有因不能即時確定，須俟日後確定時始能補充者。似宜容許發票人先行簽發票據，交由他人依事先之合意補填，以減少交易上之困難。此種情形，依現行票據法第十一條之規定，其票據係屬無效，茲擬仿日內瓦統一票據法及英美票據法例，改採空白授權記載主義、以資適應。並明文限制票據債務人之抗辯權，以保障善意第三人之利益。歸併原本法施行法第一條意旨，增列第三項，以明定原記載人於交付前得改寫之，以符實際，並參酌本法第十六條所定經變造金額票據不當然歸於無效之意旨，不禁止原發票人改寫其金額。但仍應簽名以示鄭重。
 
 * 12 票據上記載本法所不規定之事項者，不生票據上之效力。
 
-* 13 票據債務人不得以自己與發票人或執票人之前手間所存抗辯之事由對抗執票人。但執票人取得票據出於惡意或詐欺時，不在此限。
+* 13 票據債務人，不得以自己與發票人或執票人之前手間所存抗辯之事由，對抗執票人。但執票人取得票據出於惡意者，不在此限。
 
-* 14 以惡意或有重大過失取得票據者，不得享有票據上之權利。
+> 釋：以惡意或重大過失取得票據者，不得享有票據上之權利，本法第十四條已有明文規定，而詐欺未有不屬於惡意者，條文既已明列惡意，即不必再有詐欺字樣，以免解釋上發生困難。
+
+* 14 以惡意或有重大過失取得票據者，不得享有票據上之權利。無對價或以不相當之對價取得票據者，不得享有優於其前手之權利。
+
+> 釋：原本法施行法第五條，因屬實質上之規定，移併本條增列為第二項，並改兌價為對價，以期與民法上用語一致，並依第一項用語增一「享」字。
 
 * 15 票據之偽造或票上簽名之偽造，不影響於真正簽名之效力。
 
-* 16 票據經變造時，簽名在變造前者，依原有文義負責。簽名在變造後者，依變造文義負責。不能辨別前後時，推定簽名在變造前。
+* 16 票據經變造時，簽名在變造前者，依原有文義負責；簽名在變造後者，依變造文義負責；不能辨別前後時，推定簽名在變造前。前項票據變造，其參與或同意變造者，不論簽名在變造前後，均依變造文義負責。
+
+> 釋：變造票據之行為，其實施變造行為者，倘簽名於票據，則縱簽名在變造以前，自應依變造之文義負其責任。其雖非變造行為人，而同意他人變造者亦同。此為理論所當然，因予增列，以免爭執。
 
 * 17 票據上之簽名或記載被塗銷時，非由票據權利人故意為之者，不影響於票據上之效力。
 
-* 18 票據喪失時，執票人應即為止付之通知。
+* 18 票據喪失時，票據權利人得為止付之通知。但應於提出止付通知後五日內，向付款人提出已為聲請公示催告之證明。未依前項但書規定辦理者，止付通知失其效力。
 
-* 19 執票人喪失票據時，得為公示催告之聲請。公示催告程序開始後，其經到期之票據，聲請人得提供擔保請求票據金額之支付。不能提供擔保時，得請求將票據金額提存於法院、商會、銀行公會或其他得受提存之公共會所。其尚未到期之票據，聲請人得提供擔保，請求給與新票據。
+> 釋：有止付通知之權利者，應為票據權利人而非執票人，又權利人於喪失票據後，如自甘損失，不為止付之通知，法律似無加以強制之必要，因改為「得為止付之通知」。惟既經通知止付，即應為公示催告之聲請，以求其根本解決，且亦不宜任其久延，致損及他人利益，因增列第一項但書。同時以第二項規定，未依前項但書規定辦理時所生效果，以免爭執。
+
+* 19 票據喪失時，票據權利人得為公示催告之聲請。公示催告程序開始後，其經到期之票據，聲請人得提供擔保，請求票據金額之支付；不能提供擔保時，得請求將票據金額依法提存。其尚未到期之票據，聲請人得提供擔保，請求給與新票據。
+
+> 釋：改執票人為票據權利人，其理由與前條說明相同，又提存法已公佈施行多年，有關提存處所，自應依該法規定辦理，因刪去「法院、商會、銀行公會或其他得受提存之公共會所」字樣，以資配合。
 
 * 20 為行使或保全票據上權利，對於票據關係人應為之行為，應在票據上指定之處所為之；無指定之處所者，在其營業所為之；無營業所者，在其住所或居所為之。票據關係人之營業所、住所或居所不明時，因作成拒絕證書，得請求法院公證處、商會或其他公共會所，調查其人之所在；若仍不明時，得在該法院公證處、商會或其他公共會所作成之。
 
 * 21 為行使或保全票據上權利，對於票據關係人應為之行為，應於其營業日之營業時間內為之；如其無特定營業日或未訂有營業時間者，應於通常營業日之營業時間內為之。
 
-* 22 票據上之權利，對匯票承兌人及本票發票人，自到期日起算，三年間不行使者，因時效而消滅。對支票發票人一年間不行使者，因時效而消滅。匯票、本票之執票人，對前手之追索權，自作成拒絕證書日起算，一年間不行使，因時效而消滅。支票之執票人，對前手之追索權，四個月不行使，因時效而消滅。其免除作成拒絕證書者，匯票、本票，自到期日起算。支票自提示日起算。匯票、本票之背書人，對於前手之追索權，自為清償之日或被訴之日起算，六個月間不行使，因時效而消滅。支票之背書人，對前手之追索權，二個月間不行使，因時效而消滅。票據上之債權，雖依本法因時效或手續之欠缺而消滅，執票人對於發票人或承兌人，於其所受利益之限度，得請求償還。
+* 22 票據上之權利，對匯票承兌人及本票發票人，自到期日起算；見票即付之本票，自發票日起算，三年間不行使，因時效而消滅。對支票發票人自發票日起算，一年間不行使，因時效而消滅。匯票、本票之執票人，對前手之追索權，自作成拒絕證書日起算，一年間不行使，因時效而消滅。支票之執票人，對前手之追索權，四個月間不行使，因時效而消滅。其免除作成拒絕證書者：匯票、本票自到期日起算；支票自提示日起算。匯票、本票之背書人，對於前手之追索權，自為清償之日或被訴之日起算，六個月間不行使，因時效而消滅。支票之背書人，對前手之追索權，二個月間不行使，因時效而消滅。票據上之債權，雖依本法因時效或手續之欠缺而消滅，執票人對於發票人或承兌人，於其所受利益之限度，得請求償還。
 
-* 23 票據餘白不敷記載時，得黏單延長之，黏單後之第一記載，應書於騎縫上，並加蓋印章。
+> 釋：一、見票即付之本票，無確定之到期日，且依規定於發票之當日即得請求付款，故擬增訂，使其時效自發票日起算。並依同一理由增訂支票時效之起算日。二、於四個月下增一「間」字，以求與前項用語一致。
+
+* 23 票據餘白不敷記載時，得黏單延長之。黏單後第一記載人，應於騎縫上簽名。
+
+> 釋：改蓋章為簽名，以期與第六條規定配合，並僅限定第一記載人應於騎縫上簽名，但其記載，則並不蓋印章。
 
 * 24 匯票應記載左列事項，由發票人簽名：一、表明其為匯票之文字。二、一定之金額。三、付款人之姓名或商號。四、受款人之姓名或商號。五、無條件支付之委託。六、發票地。七、發票年、月、日。八、付款地。九、到期日。未載到期日者，視為見票即付。未載付款人者，以發票人為付款人。未載受款人者，以執票人為受款人。未載發票地者，以發票人之營業所、住所或居所所在地為發票地。未載付款地者，以付款人之營業所、住所或居所所在地為付款地。
 
-* 25 發票人得以自己或付款人為受款人，並得以自己為付款人。
+* 25 發票人得以自己或付款人為受款人，並得以自己為付款人。匯票未載受款人者，執票人得於無記名匯票之空白內，記載自己或他人為受款人，變更為記名匯票。
+
+> 釋：本法第三十三條已有執票人得就空白背書填載自己或他人姓名，變更為記名背書之規定，似應增列得將無記名匯票，變更為記名匯票之規定，以資配合，並以明文規定記名匯票及無記名匯票之定義，俾期明確。
 
 * 26 發票人得於付款人外，記載一人為擔當付款人。發票人亦得於付款人外，記載在付款地之一人為預備付款人。
 
@@ -54,23 +76,37 @@
 
 * 28 發票人得記載對於票據金額支付利息及其利率。利率未經載明時，定為年利六釐。利息自發票日起算。但有特約者，不在此限。
 
-* 29 發票人應照匯票文義，擔保，承兌及付款。但得依特約免除擔保承兌之責。匯票上有免除擔保付款之記載者其記載無效。
+* 29 發票人應照匯票文義擔保承兌及付款。但得依特約免除擔保承兌之責。前項特約，應載明於匯票。匯票上有免除擔保付款之記載者，其記載無效。
 
-* 30 匯票依背書而轉讓，但發票人有禁止轉讓之記載者，不在此限。背書人於票上記載禁止轉讓者，仍得依背書而轉讓之。但禁止轉讓者，對於禁止後再由背書取得匯票之人，不負責任。
+> 釋：票據為文義證券，如有特約，自應載明於票據，以免爭執。
 
-* 31 背書由背書人在匯票之背面或其黏單上為之，記載被背書人之姓名或商號及背書之年、月、日，由背書人簽名。背書人得不記載被背書人及年、月、日，僅簽名於匯票，而為空白背書。
+* 30 匯票依背書及交付而轉讓。無記名匯票得僅依交付轉讓之。記名匯票發票人有禁止轉讓之記載者，不得轉讓。背書人於票上記載禁止轉讓者，仍得依背書而轉讓之。但禁止轉讓者，對於禁止後再由背書取得匯票之人，不負責任。
 
-* 32 空白背書之匯票，得依匯票之交付轉讓之。前項匯票，亦得以空白背書或記載被背書人姓名或商號轉讓之。
+> 釋：匯票之轉讓，不惟應作成背書，並應將匯票交付，始生轉讓之效力。但無記名匯票，則得僅依交付以為轉讓，因以明文規定之。至發票人於票上作禁止轉讓之記載者，依其性質，亦非不可再予轉讓，惟禁止後轉讓之效力，有所不同而已。因刪第一項但書，並於第二項加發票人字樣，以資適用。第二項係新增，其理由，依現行法本條第一項之規定「匯票依背書而轉讓，但發票人有禁止轉讓之記載者，不在此限。」，因發票人記載禁止轉讓，其證券乃成為一指名證券，僅可依普通債權轉讓之方式及效力而為轉讓，不得以背書轉讓，所以發票人有禁止背書轉讓之權利，故本條增訂之。
 
-* 33 空白背書匯票，或最後之背書為空白之匯票，其執票人得於空白內記載自己或他人為被背書人，再為轉讓。
+* 31 背書由背書人在匯票之背面或其黏單上為之。背書人記載被背書人，並簽名於匯票者，為記名背書。背書人不記載被背書人，僅簽名於匯票者，為空白背書。前兩項之背書，背書人得記載背書之年、月、日。
 
-* 34 匯票得依背書讓與發票人、承兌人、付款人或其他票據債務人。前項受讓人，於票據未到期前，得更以背書轉讓之。
+> 釋：本條第二項，由原條文第一項內分出，明定記名背書之定義，俾與原第二項空白背書之規定配合，又本法第四十三條關於匯票之承兌，尚且未規定應記載年月日而於背書作此規定，立法上似欠一致，實例上似亦不能因未載年月日，而使背書陷於無效，因予刪去。原條文第二項順移為第三項，並依上述意旨，作文字修正。第四項增訂其理由，背書人亦得記載背書之年、月、日，以示慎重。
+
+* 32 空白背書之匯票，得依匯票之交付轉讓之。前項匯票，亦得以空白背書或記名背書轉讓之。
+
+> 釋：參酌前條定義修正，以資配合。
+
+* 33 匯票之最後背書為空白背書者，執票人得於該空白內，記載自己或他人為被背書人，變更為記名背書，再為轉讓。
+
+> 釋：本條原條文似不明確，故作文字修正。
+
+* 34 匯票得讓與發票人、承兌人、付款人或其他票據債務人。前項受讓人，於匯票到期日前，得再為轉讓。
+
+> 釋：無記名及空白背書匯票之轉讓，均不以先經背書為必要，故將本條第一、二項有關背書字樣刪除。
 
 * 35 背書人得記載在付款地之一人為預備付款人。
 
 * 36 就匯票金額之一部分所為之背書，或將匯票金額分別轉讓於數人之背書，不生效力。背書附記條件者，其條件視為無記載。
 
-* 37 執票人應以背書之連續，證明其權利。但背書中有空白背書時，其次之背書人，視為前空白背書之被背書人。塗銷之背書，關於背書之連續，視為無記載。
+* 37 執票人應以背書之連續，證明其權利。但背書中有空白背書時，其次之背書人，視為前空白背書之被背書人。塗銷之背書，不影響背書之連續者，對於背書之連續，視為無記載。塗銷之背書，影響背書之連續者，對於背書之連續，視為未塗銷。
+
+> 釋：塗銷之背書，其效果如何，本條規定過簡，解釋上頗滋紛擾，因塗銷之背書，倘認為無記載，則原本連續之背書，一經塗銷後，即變為不連續，嗣後之執票人依本條第一項即無從行使其權利，與第三十八條規定，仍得向被塗銷背書人之前手行使權利之意旨，似欠一致，因參照美國票據法例予以修正，視其是否影響于背書之連續而異其效果，以免適用上有所杆格。第三項新增。其理由，明定塗銷背書之效果。
 
 * 38 執票人故意塗銷背書者，其被塗銷之背書人，及其被塗銷背書人名次之後而於未塗銷以前為背書者，均免其責任。
 
@@ -78,7 +114,9 @@
 
 * 40 執票人以委任取款之目的而為背書時，應於匯票上記載之。前項被背書人，得行使匯票上一切權利，並得以同一目的更為背書。其次之被背書人所得行使之權利，與第一被背書人同。票據債務人，對於受任人所得提出之抗辯，以得對抗委任人者為限。
 
-* 41 到期日後之背書，與到期目前之背書，有同一效力。但作成拒絕付款證書後，或作拒絕付款證書期限經過後，所為之背書，僅有通常債權轉讓之效力，背書人不負票據上之責任。
+* 41 到期日後之背書，僅有通常債權轉讓之效力。背書未記明日期者，推定其作成於到期日前。
+
+> 釋：原條文容許匯票於到期後繼續流通，但期限亦極短促，實益有限，而增加法律事實之複雜性，易生糾紛。且執票人於票據到期後不即請求付款，而仍將票據流通，亦非事理之常。故酌加修正，以限制到期日後票據之流通性，又背書未記明日期者，為期確定背書人應負之責任，爰採日內瓦統一票據法例，以明文推定其作成於到期日以前。
 
 * 42 執票人於匯票到期日前，得向付款人為承兌之提示。
 
@@ -88,13 +126,19 @@
 
 * 45 見票後定期付款之匯票，應自發票日起六個月內為承兌之提示。前項期限，發票人得以特約縮短或延長之。但延長之期限，不得逾六個月。
 
-* 46 見票後定期付款之匯票，或指定請求承兌期限之匯票，應由付款人在承兌時，記載其日期。承兌日期未經記載時，以前條所許或發票人指定之承兌期限之末日，為承兌日。
+* 46 見票後定期付款之匯票，或指定請求承兌期限之匯票，應由付款人在承兌時，記載其日期。承兌日期未經記載時，承兌仍屬有效。但執票人得請作成拒絕證書，證明承兌日期；未作成拒絕證書者，以前條所許或發票人指定之承兌期限之末日為承兌日。
 
-* 47 付款人承兌時，經執票人之同意，得就匯票金額之一部份為之。但執票人應將事由通知其前手。承兌附件者，視為承兌之拒絕。但承兌人仍依所附條件負其責任。執票人於獲一部份承兌後，對於未獲承兌之一部份，應作成拒絕證書證明之。
+> 釋：本項修正文字，明文規定承兌日期未經記載時，執票人得請求作成拒絕證書以資證明，其未作成拒絕證書者，始以前條所許或發票人指定之承兌期限之末日為承兌日，以保障執票人之利益。並與第六十七條第二項修正條文相配合。
+
+* 47 付款人承兌時，經執票人之同意，得就匯票金額之一部分為之。但執票人應將事由通知其前手。承兌附條件者，視為承兌之拒絕。但承兌人仍依所附條件負其責任。
+
+> 釋：第三項擬移第八十六條作統一規定。
 
 * 48 付款人於執票人請求承兌時，得請其延期為之。但以三日為限。
 
-* 49 匯票上未經發票人指定擔當付款人者，付款人得於承兌時記載之。
+* 49 付款人於承兌時，得指定擔當付款人。發票人已指定擔當付款人者，付款人於承兌時，得塗銷或變更之。
+
+> 釋：第一項，擔當付款人係付款人之代理人，自應由付款人指定為宜。原條文規定以未經發票人指定擔當付款人者，始得由付款人於承兌時記載之，似有未妥，因修正之，並增設第二項，規定發票人雖已指定擔當付款人者，付款人仍得於承兌時塗銷或變更之。
 
 * 50 付款人於承兌時，得於匯票上記載付款地之付款處所。
 
@@ -124,13 +168,19 @@
 
 * 63 保證得就匯票金額之一部分為之。
 
-* 64 保證人清償債務後，得行使執票人對被保證人及其前手之追索權。
+* 64 保證人清償債務後，得行使執票人對承兌人、被保證人及其前手之追索權。
 
-* 65 匯票之到期日，應依左列各式之一定之。一、定日付款。二、發票日後定期付款。三、見票即付。四、見票後定期付款。分期付款之匯票無效。
+> 釋：保證人於清償債務後，其得行使之權利，係票據上一切權利，而不僅以追索權為限，其行使權利之對象，亦應包括承兌人在內，但該項票據既經被拒絕承兌或付款，自不宜更以背書為轉讓。
+
+* 65 匯票之到期日，應依左列各式之一定之：一、定日付款。二、發票日後定期付款。三、見票即付。四、見票後定期付款。分期付款之匯票，其中任何一期，到期不獲付款時，未到期部分，視為全部到期。前項視為到期之匯票金額中所含未到期之利息，於清償時，應扣減之。利息經約定於匯票到期日前分期付款者，任何一期利息到期不獲付款時，全部匯票金額視為均已到期。
+
+> 釋：原條文第二項規定分期付款之匯票無效，惟近來工商業日趨發達，分期付款之買賣日見普遍，擬採美國票據法例，予以修訂，准許分期付款，以適應事實需要，促進工商業之發展，並規定其中任何一期到期不獲付款時，未到期部份視為全部均已到期，惟於清償時，依約定利率扣減利息，以示公平。此外並增設第三項，規定分期支付利息有關事項。
 
 * 66 見票即付之匯票，以提示日為到期日。第四十五條之規定，於前項提示準用之。
 
-* 67 見票後定期付款之匯票，依承兌日或拒絕證書作成日，計算到期日。匯票未載明承兌日，又無拒絕證明者，依第四十五條所規定，承兌提示期限之末日，計算到期日。
+* 67 見票後定期付款之匯票，依承兌日或拒絕承兌證書作成日，計算到期日。匯票經拒絕承兌而未作成拒絕承兌證書者，依第四十五條所規定承兌提示期限之末日，計算到期日。
+
+> 釋：第二項原條文文字頗為含混，所稱未載明承兌日，似指業已承兌而未載明承兌日期者而言。而又無拒絕證明者，則似指未獲承兌又無拒絕證明者而言。爰予修正，將前一種情形於第四十六條第二項予以規定，而於本項對後一種情形予以規定。
 
 * 68 發票日後或見票日後一個月或數個月付款之匯票，以在應付款之月與該日期相當之日為到期日；無相當日者，以該月末日為到期日。發票日後或見票日後一個月半或數個月半付款之匯票，應依前項規定，計算全月後加十五日，以其末日為到期日。票上僅載月初、月中、月底者，謂月之一日、十五日、末日。
 
@@ -138,17 +188,23 @@
 
 * 70 付款經執票人之同意，得延期為之。但以提示後三日為限。
 
-* 71 付款人對於背書不連續之匯票而付款者，應自負其責。付款人對於背書簽名之真偽，及執票人是否本人，不負認定之責，但有詐欺或重大過失時，不在此限。
+* 71 付款人對於背書不連續之匯票而付款者，應自負其責。付款人對於背書簽名之真偽，及執票人是否票據權利人，不負認定之責。但有惡意或重大過失時，不在此限。
+
+> 釋：無記名匯票，或空白背書匯票，均以執票人為受款人，原條文「執票人是否本人」，所謂本人究何所指，解釋上易滋爭執，似應改為「執票人是否票據權利人」較為妥當。又本條原旨，乃使付款人對於明知或顯然可知執票人非為票據權利人而貿然付款者負其責任，故非詐欺問題，而係惡意或過失問題，故擬改正使依「惡意」或「重大過失」負責。
 
 * 72 到期日前之付款，執票人得拒絕之。付款人於到期日前付款者，應自負其責。
 
-* 73 一部付之付款，執票人不得拒絕。執票人於獲一部分付款後，對於未獲付款之一部分，應作成拒絕證書證明之。
+* 73 一部分之付款，執票人不得拒絕。
+
+> 釋：原條文第二項移併第八十六條作統一規定。
 
 * 74 付款人付款時，得要求執票人記載收訖字樣簽名為證，並交出匯票。付款人為一部分之付款時，得要求執票人在票上記載所收金額，並另給收據。
 
 * 75 表示匯票金額之貨幣，如為付款地不通用者，得依付款日行市，以付款地通用之貨幣支付之。但有特約者，不在此限。表示匯票金額之貨幣，如在發票地與付款地名同價異者，推定其為付款地之貨幣。
 
-* 76 執票人在第六十九條所定期限內不為付款之提示時，票據債務人，得將匯票金額提存於付款地之法院、商會、銀行公會或其他得受提存之公共會所，其提存費用，由執票人負擔之。前項提存，有免除提存人債務之效力。
+* 76 執票人在第六十九條所定期限內，不為付款之提示時，票據債務人得將匯票金額依法提存；其提存費用，由執票人負擔之。
+
+> 釋：一、改為「依法提存」字樣，理由同第十九條說明後段。二、第二項予以刪除。其理由，票據債務人既將匯票金額依法提存，依照民法之規定，當然有免除提存人債務之效力，毋庸再加以規定，故予刪除。
 
 * 77 參加付款，應於執票人得行使追索權時為之。但至遲不得逾拒絕證明作成期限之末日。
 
@@ -166,11 +222,17 @@
 
 * 84 參加付款人，對於承兌人、被參加付款人及其前手，取得執票人之權利。但不得以背書更為轉讓。被參加付款人之後手，因參加付款而免除債務。
 
-* 85 匯票到期不獲付款時，執票人於行使或保全匯票上權利之行為後，對於背書人，發票人及匯票上其他債務人得行使追索權。有左列情形之一者，雖在到期日前，執票人亦得行使前項權利。一、匯票不獲承兌時。二、付款人或承兌人死亡，逃避或其他原因無從為承兌提示時。三、付款人或承兌人受破產宣告時。
+* 85 匯票到期不獲付款時，執票人於行使或保全匯票上權利之行為後，對於背書人、發票人及匯票上其他債務人，得行使追索權。有左列情形之一者，雖在到期日前，執票人亦得行使前項權利：一、匯票不獲承兌時。二、付款人或承兌人死亡、逃避或其他原因，無從為承兌或付款提示時。三、付款人或承兌人受破產宣告時。
 
-* 86 匯票不獲承兌，或不獲付款，或無從為承兌提示時，執票人應請求作成拒絕證書證明之。付款人或承兌人在匯票上記載提示日期及承兌或付款之拒絕，經其簽名後，與作成拒絕證書，有同一效力。付款人或承兌人之破產，應以破產宣告書之謄本證明之。
+> 釋：第二款所規定付款人或承兌人死亡，逃避或有其他原因者，亦可能構成無從為「付款提示」之情形，似亦應准提前行使追索權，故予增列，以資適用。
 
-* 87 拒絕承兌證書，於提示承兌期內作成之。拒絕付款證書，應於拒絕付款日或其後五日內作成之。但執票人允許延期付款時，應於延期之末日，或其後五日內作成之。
+* 86 匯票全部或一部不獲承兌或付款或無從為承兌或付款提示時，執票人應請求作成拒絕證書證明之。付款人或承兌人在匯票上記載提示日期，及全部或一部承兌或付款之拒絕，經其簽名後，與作成拒絕證書有同一效力。付款人或承兌人之破產，以宣告破產裁定之正本或節本證明之。
+
+> 釋：原條文第四十七條第三項、第七十三條第二項及第一三一條第二項，移併本案第一、二項作統一規定，並依前條修正意旨，增列「無從為付款提示」，作為應作成拒絕證書之事由。第三項，原條文「破產宣告書」及「謄本」與現行法規定不符，並依破產法及民事訴訟法有關條文改為「宣告破產裁定之正本或節本。」
+
+* 87 拒絕承兌證書，應於提示承兌期限內作成之。拒絕付款證書，應以拒絕付款日或其後五日內作成之。但執票人允許延期付款時，應於延期之末日，或其後五日內作成之。
+
+> 釋：第一項作文字修正，以資明確。
 
 * 88 拒絕承兌證書作成後，無須再為付款提示，亦無須再請求作成付款拒絕證書。
 
@@ -194,11 +256,17 @@
 
 * 98 為第九十七條之清償者，得向承兌人或前手要求左列金額：一、所支付之總金額。二、前款金額之利息。三、所支出之必要費用。發票人為第九十七條之清償者，向承兌人要求之金額同。
 
-* 99 發票人為背書人時，對其前手無追索權。前背書人為被背書人時，對其原有之後手，無追索權。
+* 99 執票人為發票人時，對其前手無追索權。執票人為背書人時，對該背書之後手無追索權。
 
-* 100 匯票上債務人為清償時，執票人應交出匯票及附有收據之償還計算書，有拒絕證書時，應一併交出。背書人為清償時，得塗銷自己及其後手之背書。
+> 釋：依本法第八十五條以下規定，追索權乃由「執票人」而非由「發票人」、「背書人」或「被背書人」行使，原條文易滋誤會，故擬修正。
 
-* 101 匯票金額一部份獲承兌時，清償未獲承兌之部份者，得要求執票人在匯票上記載其事由，並交出收據、匯票之謄本及其證書。
+* 100 匯票債務人為清償時，執票人應交出匯票。有拒絕證書時，應一併交出。匯票債務人為前項清償，如有利息及費用者，執票人應出具收據及償還計算書。背書人為清償時，得塗銷自己及其後手之背書。
+
+> 釋：票據債務人為清償時，除票據金額外，其應一併清償者，僅以利息及費用為限，亦僅對該二項，始有由執票人出具收據及償還計算書之必要，因就原條文作文字修正，並將利息及費用另列第二項。原第二項改列第三項。
+
+* 101 匯票金額一部分獲承兌時，清償未獲承兌部分之人，得要求執票人在匯票上記載其事由，另行出具收據，並交出匯票之謄本及拒絕承兌證書。
+
+> 釋：匯票金額一部份獲承兌，清償未獲承兌之部份者，自不能請求執票人交出匯票，而祇得請求另給收據，該項收據係由執票人所製作，而非其原已持有，原條文用交出收據字樣，似欠妥當，又原條文所稱之證書，當係指拒絕承兌之證書，並予訂明，以免誤會。
 
 * 102 有追索權者，得以發票人或前背書人之一人或其他票據債務人為付款人，向其住所所在地發見票即付之匯票。但有相反約定時，不在此限。前項匯票之金額，於第九十七條及第九十八條所列者外，得加經紀費及印花稅。
 
@@ -218,17 +286,23 @@
 
 * 110 執票人以匯票之原本請求承兌或付款而被拒絕，並未經返還原本時，其拒絕證書，應在謄本或其黏單上作成之。
 
-* 111 拒絕證書應接續匯票上、複本上或謄本上原有之最後記載作成之。在黏單上作成者，並應於騎縫處蓋章。
+* 111 拒絕證書應接續匯票上、複本上或謄本上原有之最後記載作成之。在黏單上作成者，並應於騎縫處簽名。
+
+> 釋：第二項改蓋章為簽名，理由同第六條。
 
 * 112 對數人行使追索權時，祇須作成拒絕證書一份。
 
 * 113 拒絕證書作成人，應將證書原本交付執票人，並就證書全文另作抄本存於事務所，以備原本滅失時之用。抄本與原本有同一效力。
 
-* 114 匯票之受款人，得自負擔其費用，請求發票人發行複本。但受款人以外之執票人，請求發行複本時，須依次經由其前手請求之。並由其前手在各複本上，為同樣之背書。
+* 114 匯票之受款人，得自負擔其費用，請求發票人發行複本。但受款人以外之執票人，請求發行複本時，須依次經由其前手請求之，並由其前手在各複本上，為同樣之背書。前項複本，以三份為限。
+
+> 釋：第二項新增係將原本法施行法第七條移列。
 
 * 115 複本應記載同一文句，標明複本字樣，並編列號數。未經標明複本字樣，並編列號數者，視為獨立之匯票。
 
-* 116 就複本之一付款時，其他複本，失其效力，但承兌人對於經其承兌而未收回之複本，應負其責。背書人將複本分別轉讓於二人以上時，該背書人及其後手，亦為分別轉讓者，對於經其背書而未收回之複本，應負其責。將複本各份背書轉讓於同一人者，該背書人為償還時，得請求執票人交出複本之各份。但執票人已立保證或提供擔保者，不在此限。
+* 116 就複本之一付款時，其他複本失其效力。但承兌人對於經其承兌而未收回之複本，應負其責。背書人將複本分別轉讓於二人以上時，對於經其背書而未收回之複本，應負其責。將複本各份背書轉讓與同一人者，該背書人為償還時，得請求執票人交出複本之各份。但執票人已立保證或提供擔保者，不在此限。
+
+> 釋：第二項，背書人倘將複本分別轉讓，而未收回，即應自負其責，其後手如再分別轉讓，亦當然本此而負責任，且並非前手應負責之要件，因予修正，俾臻簡明。
 
 * 117 為提示承兌送出複本之一者，應於其他各份上載明接收人之姓名或商號及住址。匯票上有前項記載者，執票人得請求接收人交還其所接收之複本。接收人拒絕交還時，執票人非以拒絕證書證明左列各款事項，不得行使追索權：一、曾向接收人請求交還此項複本，而未經其交還。二、以他複本為承兌或付款之提示，而不獲承兌或付款。
 
@@ -236,7 +310,9 @@
 
 * 119 為提示承兌送出原本者，應於謄本上載明原本接收人之姓名或商號及其住址。匯票上有前項記載者，執票人得請求接收人交還原本。接收人拒絕交還時，執票人非將曾向接收人請求交還原本而未經其交還之事由，以拒絕證書證明，不得行使追索權。
 
-* 120 本票，應記載左列事項，由發票人簽名：一、表明其為本票之文字。二、一定之金額。三、受款人之姓名、或商號。四、無條件擔任支付。五、發票地。六、發票年、月、日。七、付款地。八、到期日。未載到期日者，視為見票即付。未載受款人者，以執票人為受款人。未載發票地者，以發票人之營業所、住所或居所所在地為發票地。未載付款地者，以發票地為付款地。
+* 120 本票應記載左列事項，由發票人簽名：一、表明其為本票之文字。二、一定之金額。三、受款人之姓名或商號。四、無條件擔任支付。五、發票地。六、發票年、月、日。七、付款地。八、到期日。未載到期日者，視為見票即付。未載受款人者，以執票人為受款人。未載發票地者，以發票人之營業所、住所或居所所在地為發票地。未載付款地者，以發票地為付款地。見票即付，並不記載受款人之本票，其金額須在五百元以上。
+
+> 釋：第六項新增係原本法施行法第六條條文移列，並按目前經濟情形，就原條所定金額，酌予增高。
 
 * 121 本票發票人所負責任，與匯票承兌人同。
 
@@ -244,21 +320,31 @@
 
 * 123 執票人向本票發票人行使追索權時，得聲請法院裁定後強制執行。
 
-* 124 第二章第一節第二十六條第一項及第二十八條，關於發票人之規定，第二章第二節關於背書之規定，除第三十五條外，第二章第五節關於保證之規定，第二章第六節關於到期之規定，第二章第七節關於付款之規定，第二章第八節關於參加付款之規定，除第七十九條及第八十二條第二項外，第二章第九節關於追索權之規定，除第八十七條第一項、第八十八條及第一百零一條外，第二章第十節關於拒絕證書之規定，第二章第十二節關於謄本之規定，除第一百十九條外，均於本票準用之。
+* 124 第二章第一節第二十五條第二項、第二十六條第一項及第二十八條，關於發票人之規定；第二章第二節關於背書之規定，除第三十五條外，第二章第五節關於保證之規定；第二章第六節關於到期日之規定；第二章第七節關於付款之規定；第二章第八節關於參加付款之規定，除第七十九條及第八十二條第二項外；第二章第九節關於追索權之規定，除第八十七條第一項，第八十八條及第一百零一條外；第二章第十節關於拒絕證書之規定；第二章第十二節關於謄本之規定，除第一百十九條外；均於本票準用之。
 
-* 125 支票應記載左列事項，由發票人簽名：一、表明其為支票之文字。二、一定之金額。三、付款人之商號。四、受款人之姓名或商號。五、無條件支付之委託。六、發票地。七、發票年、月、日。八、付款地。未載受款人者，以執票人為受款人。未載發票地者，以發票人之營業所、住所或居所為發票地。發票人得以自己或付款人為受款人，並得以自己為付款人。依本法第一百二十八條第二項提示付款者，其提示日視為發票日。
+> 釋：第二十五條第二項應在準用之列，故予增列。
+
+* 125 支票應記載左列事項，由發票人簽名：一、表明其為支票之文字。二、一定之金額。三、付款人之商號。四、受款人之姓名或商號。五、無條件支付之委託。六、發票地。七、發票年、月、日。八、付款地。未載受款人者，以執票人為受款人。未載發票地者，以發票人之營業所、住所或居所為發票地。發票人得以自己或付款人為受款人，並得以自己為付款人。
+
+> 釋：原第五項因配合第一二八條第二項修訂條文擬刪。
 
 * 126 發票人應照支票文義擔保支票之支付。
 
 * 127 支票之付款人以銀錢業者及信用合作社為限。
 
-* 128 支票限於見票即付，有相反之記載者，其記載無效。執票人於票載日期前，提示付款時，應即付款。
+* 128 支票限於見票即付，有相反之記載者，其記載無效。支票在票載發票日前，執票人不得為付款之提示。
+
+> 釋：我現行票據制度，認支票為支付證券，而與匯票之為信用證券者有別。惟實際上我國使用支票之情形，遠較本票、匯票為普遍。其以預開之遠期支票代替匯票、本票流通於市面者，到處可見。本法於四十九年修正時，乃參照日內瓦統一票據法增訂第二項，規定：「執票人於票載日期前，提示付款時，應即付款。」以貫澈支票「見票即付」之特性。但事實上遠期支票所載發票日期，原係雙方約定之付款日期。茲法律准許受款人依片面意願提前提示付款，無異鼓勵債權人違背誠信原則行使債權。而使債務人猝不及防，極易陷於週轉困難，勢必增加支票不能兌現之機會。益以支票不獲兌現另有刑罰規定，此項修正案更增加債權人挾制發票人之力量，使其更傾向於收受遠期支票，所以此項修正案實施後，並無遏止遠期支票流通之效力，甚至變本加厲，愈見增加，而遠期支票流通之弊端，不僅在於擾亂票據之制度，主要乃因發票人之所以簽發遠期支票，即由於發票當時存款不足，支票之支付，乃悉賴事後籌款補存，一旦籌補不及，即成空頭，遠期支票乃因而構成，影響票據信用之主要因素，更因現行制度，遠期支票不能兌現仍須處罰，遂使每一週轉不靈之債務人，均須遭受刑事處罰，造成刑事政策上之重大偏向，如純依理論立場，固須徹底禁止遠期支票之流通，但社會行之已久，硬性禁止必無效果，如突然徹底禁止，亦恐影響工商貿易，權衡得失，乃擬參照國際貨幣基金專家之建議，改採英美票據法例，以明文限制執票人於票載發票日前提示請求付款。如此一方面固可糾正提前付款之弊，另一方面亦因其限制執票人期前提示，使付款人不能見票，不致與支票之「見票即付」特性原則有背。並增設規定准許在票載發票日以前簽發支票之發票人，得於票載發票日前撤回其付款委託。以排除法律對遠期支票執票人之過分保障，庶幾債權人對遠期支票減少興趣，寧願選擇可以逕受強制執行之本票，必可導票據之使用，漸入於正軌。
 
 * 129 以支票轉帳或為抵銷者，視為支票之支付。
 
-* 130 支票之執票人，除依第一百二十八條第二項規定提示外，應於左列期限內，為付款之提示：一、在發票地付款者，發票日後十日內。二、不在發票地付款者，發票日後一個月內。三、發票地在國外，付款地在國內者，發票日後三個月內。
+* 130 支票之執票人，應於左列期限內，為付款之提示：一、發票地與付款地在同一省（市）區內者，發票日後七日內。二、發票地與付款地不在同一省（市）區內者，發票日後十五日內。三、發票地在國外，付款地在國內者，發票日後二個月內。
 
-* 131 執票人於第一百三十條所定提示期限內，為付款之提示而被拒絕時，對於前手得行使追索權。但應於拒絕付款日或其後五日內，請求作成拒絕證書。付款人於支票上記載拒絕文義及其年、月、日並簽名者，與作成拒絕證書，有同一效力。向票據交換所提示之支票，如有拒絕文義之記載，與作成拒絕證書，有同一效力。
+> 釋：近年來交通事業日見發達，國內外交通，朝發夕至，本條有關支票提示期限之規定，在時間上已嫌過長，因酌予修正，又為配合第一二八條修正條文之規定，並刪「除依第一二八條第二項規定提示外。」一句，以期一致。
+
+* 131 執票人於第一百三十條所定提示期限內，為付款之提示而被拒絕時，對於前手得行使追索權。但應於拒絕付款日或其後五日內，請求作成拒絕證書。付款人於支票或黏單上記載拒絕文義及其年、月、日並簽名者，與作成拒絕證書，有同一效力。
+
+> 釋：原條文第三項規定向票據交換所提示之支票。依目前實際情形，仍係由付款人於退票理由單上記載拒絕文義，而非票據交換所記載，故該項退票理由單，實際上係由付款人製作，理由單之本身，亦與黏單相同，茲為配合實際作業情形，擬刪第三項，並修改第二項。
 
 * 132 執票人不於第一百三十條所定期限內為付款之提示，或不於拒絕付款日或其後五日內請求作成拒絕證書者，對於發票人以外之前手，喪失追索權。
 
@@ -266,25 +352,41 @@
 
 * 134 發票人雖於提示期限經過後，對於執票人仍負責任。但執票人怠於提示，致使發票人受損失時，應負賠償之責；其賠償金額，不得超過票面金額。
 
-* 135 發票人於第一百三十條所定期限內，不得撤銷付款之委託。但支票遺失或被盜竊或以惡意或重大過失取得時，不在此限。
+* 135 發票人於第一百三十條所定期限內，不得撤銷付款之委託。
+
+> 釋：支票無論遺失或被盜，均可依本法第十八條規定辦理，無須依第一百三十條所定期限內撤銷付款委託之必要。至於以惡意或重大過失取得支票者，依本法第十四條已不得享有票據上之權利。此時亦祇可由原執票人聲請對該取得人為假處分以資解決，自不宜由發票人撤銷付款之委託，否則票據為流通證券，對以後因善意取得票據之後執票人將失保障，故本條但書應刪。規定准許以未屆至日期為發票日之支票，發票人於票載發票日屆至前，得撤銷付款之委託，以排除法律對遠期支票之保護，庶幾使債務人對於遠期支票減少興趣，而願選擇可以逕受強制執行之本票，以導票據使用於正軌。
 
 * 136 付款人於提示期限經過後，仍得付款。但有左列情事之一者，不在此限：一、發票人撤銷付款之委託時。二、發行滿一年時。
 
 * 137 付款人於發票人之存款或信用契約所約定之數不敷支付支票金額時，得就一部分支付之。前項情形，執票人應於支票上記明實收之數目。
 
-* 138 付款人於支票上記載照付或保付或其他同義字樣後，其付款責任與匯票承兌人同。付款人於支票上已為前項之記載時，發票人及背書人免除其責任。付款人不得為存款額外或信用契約所約定數目以外之保付，違反者應科以罰鍰。但罰鍰不得超過支票金額。
+* 138 付款人於支票上記載照付或保付或其他同義字樣並簽名後，其付款責任，與匯票承兌人同。付款人於支票上已為前項之記載時，發票人及背書人免除其責任。付款人不得為存款額外或信用契約所約定數目以外之保付，違反者應科以罰鍰。但罰鍰不得超過支票金額。依第一項規定，經付款人保付之支票，不適用第十八條、第一百三十條及第一百三十六條之規定。
 
-* 139 發票人背書人或執票人在支票正面畫平行線二道，或於其線內並記載銀行、公司或其他同義之文字者，其支票僅得對銀錢業者支付之。發票人、背書人或執票人，於平行線內記載特定銀錢業者之商號，其支票僅得對於特定銀錢業者支付之。但該特定銀錢業者，得以其他銀錢業者為被背書人，背書後委託其取款。銀錢業者受委託取款時，得於未畫線支票正面畫平行線二道，或於平行線內記載自己之商號。
+> 釋：第一項加「簽名」兩字，蓋不簽名則「保付」字樣是否係由付款人記載，即無從確定，自更無法加以責任。新增第四項係將原本法施行法第八條移列，並刪「不適用第十八條」之規定，因支票雖經保付，倘果已滅失，而又不許依公示催告程序為除權判決，則銀行帳目將無法清除，而正當權利人又無法領取款項，殊非立法當初之本旨，因予修正，以資補救。
+
+* 139 支票經在正面畫平行線二道者，付款人僅得對銀錢業者或信用合作社支付票據金額。支票上平行線內記載特定銀錢業者或信用合作社之名稱者，付款人僅得對該特定銀錢業者或信用合作社支付票據金額。但該特定銀錢業者或信用合作社為執票人時，得以其他銀錢業者或信用合作社為被背書人，背書後委託其取款。畫平行線支票之執票人，如非銀錢業者或信用合作社，應將該項支票存入其在銀錢業者或信用合作社之帳戶，委託其代為取款。支票上平行線內，記載特定銀錢業者或信用合作社之名稱，應存入其在該特定銀錢業者或信用合作社之帳戶，委託其代為取款。畫平行線之支票，得由發票人於平行線內記載照付現款或同義字樣，由發票人簽名或蓋章於其旁，支票上有此記載者，視為平行線之撤銷。但支票經背書轉讓者，不在此限。
+
+> 釋：本條參酌實際作業情形作文字修正，俾易於瞭解，並加信用合作社，以與本法第四條配合。新增第五項，其理由，本項原係票據法施行法第十條之規定，予以修正增列。
 
 * 140 違反第一百三十九條之規定而付款者，應負賠償損害之責。但賠償金額不得超過支票金額。
 
-* 141 明知已無存款，又未經付款人允許墊借，而對之發支票者，處一年以下有期徒刑、拘役或科或併科該支票面額以下之罰金。發支票時故意將金額超過其存數或超過付款人允許墊借之金額者，處一年以下有期徒刑、拘役或科或併科該超過金額以下之罰金。發票人於第一百三十條所定之期限內，故意提回其存款之全部或一部，使支票不獲支付者，準用前二項之規定。
+* 141 發票人無存款餘額，又未經付款人允許墊借而簽發支票，經執票人提示不獲支付者，處二年以下有期徒刑、拘役或科或併科該支票面額以下之罰金。發票人簽發支票者，故意將金額超過其存數或超過付款人允許墊借之金額，經執票人提示不獲支付者，處二年以下有期徒刑、拘役或科或併科該不足金額以下之罰金。發票人於第一百三十條所定之期限內，故意提回其存款之全部或一部或以其他不正當方法，使支票不獲支付者，準用前二項之規定。犯第一項至第三項之罪，而於辯論終結前清償支票金額之一部或全部者，減輕或免除其刑。
+
+> 釋：本條原條文，係就發票行為加以處罰。支票發票人於發票時苟無存款餘額或存款餘額不足，或未經付款人允許墊借或雖經付款人允許墊借而發票金額超過付款人允許墊借之金額者，即應予以處罰。至於發票後執票人有無提示請求付款，及發票人於發票後有無補入存款待付，均非所問，自非情理之平，爰予修改，以期合理，並使善意之發票人得於發票後有補救之機會，而樂於設法籌款解決，以減少不必要之訟案。又於第三項中增加「或以其他不正當方法」字樣，蓋目前妨害支票流通之原因，除無存款或存款不足，及於付款期內故意提回其存款之情形外，尚有故意使用不符之印章，捏造事實，非法止付等行為。其可罰性與前述情形，並無二致，而原條文並無規定，無從予以處罰，致往往為不良之徒所乘，故予修正，以資適用。並另設第四項，使於裁罰確定前，清償支票金額全部或一部者，得減輕或免除其刑之規定，以鼓勵發票人努力清償，並間接保護債權人。
 
 * 142 依前條規定處罰之案件，不適用刑法第五十六條之規定。（中華民國七十五年十二月三十一日施行期限屆滿）。
 
 * 143 付款人於發票人之存款或信用契約所約定之數，足敷支付支票金額時，應負支付之責。但收到發票人受破產宣告之通知者，不在此限。
 
-* 144 第二章第二節關於背書之規定，除第三十五條外，第二章第七節關於付款之規定，除第六十九條第一項、第二項、第七十條、第七十二條、第七十六條外，第二章第九節關於追索權之規定，除第八十五條第二項第一款第二款、第八十七條、第八十八條、第九十七條第一項第二款、第二項及第一百零一條外，第二章第十節關於拒絕證書之規定，除第一百零八條第二項，第一百零九條及第一百十條外，於支票準用之。
+* 144 第二章第一節第二十五條第二項關於發票人之規定；第二節關於背書之規定，除第三十五條外；第二章第七節關於付款之規定，除第六十九條第一項、第二項、第七十條、第七十二條、第七十六條外；第二章第九節關於追索權之規定，除第八十五條第二項第一款、第二款、第八十七條、第八十八條、第九十七條第一項第二款、第二項及第一百零一條外；第二章第十節關於拒絕證書之規定，除第一百零八條第二項、第一百零九條及第一百十條外；均於支票準用之。
 
-* 145 本法自公布日施行。
+> 釋：因支票具有見票即付性，匯票分期付款之規定，於支票自不適用，故增列排除第六十五條第二項準用之規定。並將「第二十五條第二項」列為準用之一以求周密。
+
+* 145 本法施行細則，由行政院定之。
+
+> 釋：本法施行後，原施行法之大部條文既已納入本法，而其他事涉瑣屑，屬於程序者仍以另由行政院製訂施行細則為宜。並擬於施行細則公布施行時同時將本法施行法報請廢止。
+
+* 146 本法自公布日施行。
+
+> 釋：新增第一百四十六條，以符合一般體例。
 
