--- a/司法-民事/保險法.md
+++ b/司法-民事/保險法.md
@@ -210,7 +210,9 @@
 
 * 106 由第三人訂立之人壽保險契約，其權利之移轉或出質，非經被保險人以書面承認者，不生效力。
 
-* 107 以十四歲以下之未成年人，或心神喪失或精神耗弱之人為被保險人，而訂立之死亡保險契約無效。保險人或要保人故意違反前項之規定者，處一年以下有期徒刑拘役或五百元以下罰金。
+* 107 以十四歲以下之未成年人，或心神喪失或精神耗弱之人為被保險人，而訂立之死亡保險契約無效。保險人或要保人違反前項之規定者，處行為人一年以下有期徒刑、拘役或五千元以上、一萬元以下罰金；並處保險人一萬元以上、二萬元以下罰鍰。
+
+> 釋：照黨政協商條文通過。
 
 * 108 人壽保險契約，除記載第五十五條規定事項外，並應載明左列事項：一、被保險人之姓名、性別、年齡及住所。二、受益人姓名及與被保險人之關係或確定受益人之方法。三、請求保險金額之保險事故及時期。四、依第一百十八條之規定，有減少保險金額之條件者，其條件。
 
@@ -268,11 +270,15 @@
 
 * 135 第一百零二條至第一百零四條、第一百十條至第一百十四條、第一百十六條及第一百零七條關於禁止為心神喪失或精神耗弱之人訂立保險契約之規定，於傷害保險準用之。
 
-* 136 保險業之組織，以股份有限公司或合作社為限。非保險業不得兼營保險或類似保險之業務。
+* 136 保險業之組織，以股份有限公司或合作社為限。但依其他法律規定設立者，不在此限。非保險業不得兼營保險或類似保險之業務。
+
+> 釋：目前中央信託局人壽保險處經營保險業務，係依照中央信託局條例辦理，增列但書規定，俾符事實。
 
 * 137 保險業非申請主管機關核准，並依法為營業登記，繳存保證金，領得營業執照後，不得開始營業。
 
-* 138 財產保險業以經營財產保險為限，人身保險業以經營人身保險為限。同一保險業，不得兼營財產保險及人身保險業務。責任保險及傷害保險，得視保險事業發展情況，經主管機關核准獨立經營。保險業不得兼營本法規定以外之業務。保險合作社不得經營非社員之業務。
+* 138 財產保險業，以經營財產保險為限，人身保險業，以經營人身保險為限，同一保險業，不得兼營財產保險及人身保險業務。但法律另有規定者，不在此限。責任保險及傷害保險，視保險事業發展情況，經主管機關核准，得獨立經營。保險業不得兼營本法規定以外之業務。保險合作社不得經營非社員之業務。
+
+> 釋：中央再保險公司亦為保險業之一種，中央再保險公司條例第五條已規定該公司可承受國內外保險業之財產及人身再保險業務，乃增列除外規定，以資適應，並將責任保險及傷害保險得准獨立經營之規定，分列為第二項，原第二項、第三項遞改為第三項、第四項。
 
 * 139 各種保險業資本或基金之最低額，由主管機關審酌各地經濟實況，及各種保險業務之需要，分別呈請行政院核定之。
 
@@ -282,7 +288,9 @@
 
 * 142 保證金之繳存應以現金為之。但經主管機關之核准，得以公債或庫券代繳之。前項繳存保證金，非俟宣告停業依法完成清算，不予發還。以有價證券抵繳保證金者，其息票部分，在宣告停業依法清算時，得准移充清算費用。
 
-* 143 保險業營業損失達保證金額時，主管機關得令其以現金或提供其他財產補足之。
+* 143 保險業營業損失達保證金額時，主管機關得命其以現金或提供其他財產補足之。保險業得因給付鉅額保險金之週轉需要，向外借款，經主管機關核准，得以其財產提供為債務之擔保，其因週轉需要所生之債務，應於五個月內清償。
+
+> 釋：一、增列第二項對保險業向外借債及以財產提供為債務擔保加以限制。其理由：（一）保險業為特種金融業之一種，本身積有大批資金及責任準備金，在一般情
 
 * 144 保險業收取保費之計算公式，由主管機關核定之。但健康保險及傷害保險費率中所含之利潤率，應低於其他各種保險。
 
